Feat: Comunicacion & Refactor (Docs)

--- a/Backend/Go/1.Sintaxis&Variables.md
+++ b/Backend/Go/1.Sintaxis&Variables.md
@@ -48,8 +48,6 @@ Go incluye varios tipos de operadores:
 
 En Go, cada sentencia termina con una nueva línea o un punto y coma implícito, aunque el uso de punto y coma explícito es raro.
 
----
-
 ## 1.2. Declaración de Variables
 
 En Go, las variables pueden declararse de forma explícita con la palabra clave `var` o de manera implícita con el operador `:=`, que permite la inferencia de tipo.
@@ -97,8 +95,6 @@ x = 10 // Mutabilidad
 
 ```
 
----
-
 ## 1.3. Ámbito de las Variables
 
 El ámbito o alcance de una variable define su visibilidad y duración dentro del programa.
@@ -136,8 +132,6 @@ func ejemplo() {
 
 Go organiza las variables por el contexto en el que se ejecutan. Dependiendo del lugar donde se declaran, pueden ser visibles o no.
 
----
-
 ## 1.4. Conversión de Tipos
 
 En Go, la conversión de tipos no es implícita, por lo que debe hacerse explícitamente usando la sintaxis de typecasting.
@@ -162,8 +156,6 @@ var y float64 = 2.5
 fmt.Println(float64(x) + y) // Correcto
 
 ```
-
----
 
 ## 1.5. Constantes
 
@@ -206,8 +198,6 @@ const (
 )
 ```
 
----
-
 ## 1.6. Caracteres de Escape
 
 En Go, los caracteres de escape se utilizan dentro de las cadenas para incluir símbolos que de otra forma no se podrían representar directamente o que tienen un significado especial. A continuación se detallan los más importantes:
@@ -241,8 +231,6 @@ func main() {
 }
 
 ```
-
----
 
 ## 1.7. Argumentos de Línea de Comandos
 
@@ -291,8 +279,6 @@ Argumento 1: argumento1
 
 ```
 
----
-
 ## 1.8. CLI en Go
 
 CLI son las siglas de Command Line Interface, que en español significa Interfaz de Línea de Comandos. Es una forma de interactuar con un sistema operativo o una aplicación escribiendo comandos de texto en una terminal.
@@ -325,10 +311,10 @@ func main() {
 
 ```
 
-- **`flag.String`**: Define un `flag` de tipo `string` (en este caso, --name).
-- **`flag.Int`**: Define un `flag` de tipo `int` (--age).
-- **`flag.Parse()`**: Esta función es la encargada de leer los argumentos pasados desde la línea de comandos.
-- **Uso**: Cuando ejecutas el programa desde la terminal, puedes pasarle opciones:
+- **`flag.String`:** Define un `flag` de tipo `string` (en este caso, --name).
+- **`flag.Int`:** Define un `flag` de tipo `int` (--age).
+- **`flag.Parse()`:** Esta función es la encargada de leer los argumentos pasados desde la línea de comandos.
+- **Uso:** Cuando ejecutas el programa desde la terminal, puedes pasarle opciones:
 
   ```bash
   go run main.go --name=Juan --age=30
@@ -404,12 +390,12 @@ Si necesitas una CLI más avanzada con subcomandos y mayor flexibilidad, Cobra e
 
   ```
 
-  - **`rootCmd`**: Es el comando raíz de la CLI, que en este caso es greet.
-  - **Subcomandos**: Definimos dos subcomandos:
-  - **hello**: Para saludar.
-  - **goodbye**: Para despedirse.
-  - **`AddCommand`**: Añadimos los subcomandos al comando raíz con `rootCmd.AddCommand(helloCmd)` y `rootCmd.AddCommand(goodbyeCmd)`.
-  - **Uso**: Puedes ejecutar la CLI y usar los subcomandos
+  - **`rootCmd`:** Es el comando raíz de la CLI, que en este caso es greet.
+  - **Subcomandos:** Definimos dos subcomandos:
+  - **hello:** Para saludar.
+  - **goodbye:** Para despedirse.
+  - **`AddCommand`:** Añadimos los subcomandos al comando raíz con `rootCmd.AddCommand(helloCmd)` y `rootCmd.AddCommand(goodbyeCmd)`.
+  - **Uso:** Puedes ejecutar la CLI y usar los subcomandos
 
     ```bash
     go run main.go hello Juan
@@ -419,8 +405,6 @@ Si necesitas una CLI más avanzada con subcomandos y mayor flexibilidad, Cobra e
     # Salida: Adiós, Maria!
 
     ```
-
----
 
 ## 1.9. Comandos Básicos Go
 
