--- a/Backend/Go/11.Concurrencia&Paralelismo.md
+++ b/Backend/Go/11.Concurrencia&Paralelismo.md
@@ -33,8 +33,6 @@ Las goroutines son la forma en que Go implementa la concurrencia. Son hilos livi
 
   ```
 
----
-
 ## 11.2. Colas de Mensajes y Canales
 
 En Go, los canales (channels) son la principal forma de sincronizar y compartir datos entre goroutines. Los canales permiten enviar y recibir valores de manera concurrente y segura.
@@ -103,8 +101,6 @@ En Go, los canales (channels) son la principal forma de sincronizar y compartir 
 
     ```
 
----
-
 ## 1.3. Uso de sync.WaitGroup
 
 El paquete `sync` proporciona `WaitGroup` para sincronizar goroutines. Un WaitGroup espera que un conjunto de goroutines terminen su ejecución. Es útil para asegurarse de que todas las goroutines han finalizado antes de que el programa continúe.
@@ -139,8 +135,6 @@ func main() {
 
 ```
 
----
-
 ## 11.4. Canales de Finalización (done)
 
 Un patrón común en Go es utilizar un canal llamado `done` para notificar cuando una goroutine ha finalizado su trabajo o cuando debe detenerse.
@@ -169,8 +163,6 @@ func main() {
 }
 
 ```
-
----
 
 ## 11.5. Canales de Error (errCh)
 
@@ -214,8 +206,6 @@ func main() {
 
 ```
 
----
-
 ## 11.6. Bloqueo y Sincronización
 
 Uso de `Mutex` para Evitar Condiciones de Carrera
@@ -254,8 +244,6 @@ func main() {
 
 ```
 
----
-
 ## 11.7. Procesos Paralelos
 
 Go utiliza múltiples threads del sistema operativo, y mediante la función `runtime.GOMAXPROCS()` puedes definir cuántos núcleos utilizará el programa para ejecutar goroutines de forma paralela.
@@ -287,8 +275,6 @@ func main() {
 }
 
 ```
-
----
 
 ## 11.8. Contexto en Go
 
@@ -352,8 +338,6 @@ El paquete context permite manejar la cancelación de operaciones, establecer ti
 
   ```
 
----
-
 ## 11.9. Condiciones de carrera y Deadlocks
 
 Condiciones de carrera (race conditions) ocurren cuando dos o más goroutines acceden a la misma variable compartida sin la debida sincronización, lo que puede generar resultados impredecibles.
@@ -380,12 +364,10 @@ func main() {
 
 Deadlocks ocurren cuando dos o más goroutines se bloquean mutuamente esperando que el otro libere un recurso, lo que detiene la ejecución indefinidamente.
 
-- **Para evitar deadlocks**:
+- **Para evitar deadlocks:**
 
   - Asegúrate de que las goroutines no se bloqueen mutuamente.
   - Ordena adecuadamente las operaciones de bloqueo y liberación de recursos.
-
----
 
 ## 11.10. Patrones de Concurrencia
 
