--- a/Backend/Python/1.Sintaxis&Variables.md
+++ b/Backend/Python/1.Sintaxis&Variables.md
@@ -55,8 +55,6 @@ Python es un lenguaje interpretado y de alto nivel con una sintaxis clara y conc
 
   ```
 
----
-
 ## 1.2 Declaración de Variables
 
 En Python, las variables se definen de manera sencilla sin necesidad de especificar el tipo explícitamente. Python utiliza inferencia de tipos.
@@ -101,8 +99,6 @@ En Python, las variables se definen de manera sencilla sin necesidad de especifi
 
     ```
 
----
-
 ## 1.3 Ámbito de las Variables
 
 El ámbito de una variable define su visibilidad dentro del programa.
@@ -140,8 +136,6 @@ El ámbito de una variable define su visibilidad dentro del programa.
 
   Python maneja las variables según el contexto de ejecución, permitiendo accesos y modificaciones basadas en el lugar de la declaración.
 
----
-
 ## 1.4 Conversión de Tipos
 
 En Python, la conversión de tipos se realiza explícitamente usando funciones integradas.
@@ -169,8 +163,6 @@ En Python, la conversión de tipos se realiza explícitamente usando funciones i
 
   ```
 
----
-
 ## 1.5 Constantes
 
 Python no tiene un tipo de constante específico, pero por convención, se usan nombres en mayúsculas para representar valores constantes que no deberían cambiar.
@@ -191,8 +183,6 @@ GREETING = "Hello, Python"
 
   ```
 
----
-
 ## 1.6 Caracteres de Escape
 
 En Python, los caracteres de escape se utilizan en cadenas para representar caracteres especiales.
@@ -209,8 +199,6 @@ En Python, los caracteres de escape se utilizan en cadenas para representar cara
   `\`': Comilla simple literal
   `\ooo`: Carácter octal (donde o es un dígito octal)
   `\xhh`: Carácter hexadecimal (donde h es un dígito hexadecimal)
-
----
 
 ## 1.7 Argumentos de Línea de Comandos
 
@@ -255,8 +243,6 @@ En Python, los argumentos de línea de comandos se acceden a través del módulo
 
   ```
 
----
-
 ## 1.8. CLI en Python
 
 Para crear una CLI (Command-Line Interface) en Python, existen varias formas, desde usar bibliotecas estándar como argparse hasta herramientas más avanzadas como Click o Typer. A continuación, te muestro tres formas comunes para implementar CLI en Python.
@@ -286,10 +272,10 @@ if __name__ == "__main__":
 
 ```
 
-- **`ArgumentParser`**: Define un nuevo objeto para gestionar los argumentos.
-- **`add_argument`**: Permite agregar argumentos opcionales o posicionales, en este caso --name y --age.
-- **`args = parser.parse_args()`**: Parseamos los argumentos pasados por línea de comandos.
-- **Uso**: Puedes ejecutar el programa desde la terminal
+- **`ArgumentParser`:** Define un nuevo objeto para gestionar los argumentos.
+- **`add_argument`:** Permite agregar argumentos opcionales o posicionales, en este caso --name y --age.
+- **`args = parser.parse_args()`:** Parseamos los argumentos pasados por línea de comandos.
+- **Uso:** Puedes ejecutar el programa desde la terminal
 
   ```py
   python cli.py --name Juan --age 30
@@ -321,16 +307,14 @@ Typer es una biblioteca relativamente nueva que se basa en Click, pero utiliza a
 
   ```
 
-  - **Anotaciones de tipos**: name: str y age: int permiten a Typer inferir automáticamente los tipos de datos y generar la interfaz CLI.
-  - **`typer.run()`**: Se usa para ejecutar la función como un comando de la CLI.
-  - **Uso**: Puedes ejecutar la CLI:
+  - **Anotaciones de tipos:** name: str y age: int permiten a Typer inferir automáticamente los tipos de datos y generar la interfaz CLI.
+  - **`typer.run()`:** Se usa para ejecutar la función como un comando de la CLI.
+  - **Uso:** Puedes ejecutar la CLI:
 
     ```bash
     python cli.py --name Juan --age 30
 
     ```
-
----
 
 ## 1.9. Comandos Básicos Python
 
