--- a/Backend/Python/4.Funciones&Procedimientos.md
+++ b/Backend/Python/4.Funciones&Procedimientos.md
@@ -45,8 +45,6 @@
 
   ```
 
----
-
 ## 4.2. Ámbito de Funciones
 
 - ### Alcance local y global
@@ -66,8 +64,6 @@
 - ### Variables estáticas
 
   Python no tiene variables estáticas en el sentido tradicional. Sin embargo, se puede usar variables globales o técnicas como las funciones de cierre (closures) para mantener el estado.
-
----
 
 ## 4.3. Valor y Referencia
 
@@ -97,8 +93,6 @@
 
   ```
 
----
-
 ## 4.4. Recursividad
 
 Una función es recursiva si se llama a sí misma. Debe tener una condición de parada para evitar una llamada infinita.
@@ -123,8 +117,6 @@ def suma_float(a, b):
     return a + b
 
 ```
-
----
 
 ## 4.6. Funciones Anónimas (Lambda)
 
@@ -153,8 +145,6 @@ def suma_float(a, b):
 
   ```
 
----
-
 ## 4.7. Callbacks
 
 Un callback es una función que se pasa como argumento a otra función y se ejecuta dentro de esa función.
@@ -172,8 +162,6 @@ procesar_datos(datos, print_dato)
 
 ```
 
----
-
 ## 4.8. Funciones con finally
 
 La palabra clave finally se usa para ejecutar un bloque de código sin importar si se produjo una excepción o no, similar al defer en Go.
@@ -187,8 +175,6 @@ def abrir_archivo(nombre):
         archivo.close()
 
 ```
-
----
 
 ## 4.9. Funciones como Parámetros
 
@@ -212,8 +198,6 @@ print("Resultado de la resta:", resultado_resta)  # Imprime "Resultado de la res
 
 ```
 
----
-
 ## 4.10. Funciones de Orden Superior
 
 Las funciones de orden superior son aquellas que pueden recibir otras funciones como argumentos o devolver funciones como resultado.
@@ -228,8 +212,6 @@ def main():
     print(resultado)  # Output: 8
 
 ```
-
----
 
 ## 4.11. Iteradores e Iterables
 
@@ -280,8 +262,6 @@ def main():
 
   ```
 
----
-
 ## 4.12. Decoradores
 
 Los decoradores en Python son funciones que permiten modificar o mejorar el comportamiento de otras funciones o métodos sin cambiar su código original. Son una de las características más potentes y flexibles de Python.
@@ -316,8 +296,8 @@ saludar()
 
 ```
 
-- **`mi_decorador`**: Es el decorador que recibe la función saludar como argumento.
-- **nueva_funcion**: Esta función envuelve a saludar y añade mensajes antes y después de su ejecución.
+- **`mi_decorador`:** Es el decorador que recibe la función saludar como argumento.
+- **nueva_funcion:** Esta función envuelve a saludar y añade mensajes antes y después de su ejecución.
 - Al usar `@mi_decorador` justo encima de la definición de `saludar()`, aplicamos el decorador a la función.
 
 ### Uso de decoradores con argumentos en las funciones
@@ -372,8 +352,8 @@ saludar()
 
 ```
 
-- **`repetidor(n)`**: Es un decorador que acepta un argumento (n).
-- **`decorador(func)`**: Es el decorador real que aplica el comportamiento.
+- **`repetidor(n)`:** Es un decorador que acepta un argumento (n).
+- **`decorador(func)`:** Es el decorador real que aplica el comportamiento.
 - `nueva_funcion(*args, **kwargs)`: Ejecuta la función original n veces.
 
 ### Decoradores para métodos de clase
@@ -406,9 +386,9 @@ obj.metodo()
 
 Python proporciona varios decoradores predefinidos que se usan comúnmente en clases:
 
-**`@staticmethod`**: Define un método estático que no recibe la instancia de la clase (self) como primer argumento.
-**`@classmethod`**: Define un método que recibe la clase (cls) como primer argumento en lugar de la instancia.
-**`@property`**: Define un método para que se comporte como un atributo, útil para encapsulamiento.
+**`@staticmethod`:** Define un método estático que no recibe la instancia de la clase (self) como primer argumento.
+**`@classmethod`:** Define un método que recibe la clase (cls) como primer argumento en lugar de la instancia.
+**`@property`:** Define un método para que se comporte como un atributo, útil para encapsulamiento.
 
 ```py
 class MiClase:
