--- a/Base de Datos/SQL/1.IntroduccionSQL.md
+++ b/Base de Datos/SQL/1.IntroduccionSQL.md
@@ -4,8 +4,6 @@
 
 Un **DBMS** (Database Management System) es un software que se encarga de gestionar las operaciones con bases de datos, como la creación, modificación, eliminación, y consulta de datos. Los DBMS permiten a los usuarios interactuar con los datos a través de lenguajes como SQL.
 
----
-
 ## ¿Qué son las Bases de Datos Relacionales?
 
 Una **base de datos relacional** es un conjunto de datos estructurados organizados en tablas, donde las relaciones entre los datos son definidas a través de claves (primarias y foráneas). Estas tablas están compuestas por columnas (campos) y filas (registros), lo que facilita la organización y el acceso eficiente a la información.
@@ -15,8 +13,6 @@ Una **base de datos relacional** es un conjunto de datos estructurados organizad
 - Los datos se organizan en **tablas** (relaciones).
 - Las **claves primarias** aseguran que cada registro sea único.
 - Las **claves foráneas** permiten crear relaciones entre diferentes tablas.
-
----
 
 ## Sistemas de Gestión de Bases de Datos Relacionales (RDBMS)
 
@@ -31,23 +27,19 @@ Un **RDBMS** (Relational Database Management System) es un tipo específico de D
 
 ### Beneficios de los RDBMS
 
-- **Integridad de los datos**: Mediante claves primarias y foráneas.
-- **Flexibilidad**: Facilidad para realizar consultas complejas usando SQL.
-- **Seguridad**: Control de acceso y permisos.
+- **Integridad de los datos:** Mediante claves primarias y foráneas.
+- **Flexibilidad:** Facilidad para realizar consultas complejas usando SQL.
+- **Seguridad:** Control de acceso y permisos.
 
 ### Limitaciones de los RDBMS
 
 - **Escalabilidad limitada** para grandes cantidades de datos distribuidos.
 - **Rendimiento** en operaciones extremadamente grandes o complejas.
 
----
-
 ## SQL vs NoSQL
 
-- **SQL**: Utilizado por bases de datos relacionales; los datos se almacenan en tablas con relaciones bien definidas. Es ideal para datos estructurados y consultas complejas.
-- **NoSQL**: Utilizado por bases de datos no relacionales, donde los datos pueden almacenarse en formatos como documentos, gráficos o pares clave-valor. Es ideal para grandes volúmenes de datos no estructurados o distribuidos.
-
----
+- **SQL:** Utilizado por bases de datos relacionales; los datos se almacenan en tablas con relaciones bien definidas. Es ideal para datos estructurados y consultas complejas.
+- **NoSQL:** Utilizado por bases de datos no relacionales, donde los datos pueden almacenarse en formatos como documentos, gráficos o pares clave-valor. Es ideal para grandes volúmenes de datos no estructurados o distribuidos.
 
 ## Sintaxis básica de SQL
 
@@ -65,25 +57,19 @@ Un **RDBMS** (Relational Database Management System) es un tipo específico de D
 - `JOIN`: Combina filas de dos o más tablas basadas en una condición.
 - `AS`: Se utiliza para asignar alias a columnas, tablas, o subconsultas en una consulta
 
----
-
 ## Tipos de Datos en SQL
 
-- **`INT`**: Números enteros.
-- **`VARCHAR(n)`**: Cadenas de texto de longitud variable, donde `n` es el número máximo de caracteres.
-- **`DATE`**: Fecha en formato `YYYY-MM-DD`.
-- **`DECIMAL(p, s)`**: Números decimales con `p` dígitos totales y `s` dígitos después del punto decimal.
-- **`BOOLEAN`**: Valores verdadero o falso (`TRUE` o `FALSE`).
-
----
+- **`INT`:** Números enteros.
+- **`VARCHAR(n)`:** Cadenas de texto de longitud variable, donde `n` es el número máximo de caracteres.
+- **`DATE`:** Fecha en formato `YYYY-MM-DD`.
+- **`DECIMAL(p, s)`:** Números decimales con `p` dígitos totales y `s` dígitos después del punto decimal.
+- **`BOOLEAN`:** Valores verdadero o falso (`TRUE` o `FALSE`).
 
 ## Operadores en SQL
 
-- **Operadores de comparación**: `=`, `!=`, `<`, `>`, `<=`, `>=`
-- **Operadores lógicos**: `AND`, `OR`, `NOT`
-- **Operadores de patrones**: `LIKE`, `IN`, `BETWEEN`
-
----
+- **Operadores de comparación:** `=`, `!=`, `<`, `>`, `<=`, `>=`
+- **Operadores lógicos:** `AND`, `OR`, `NOT`
+- **Operadores de patrones:** `LIKE`, `IN`, `BETWEEN`
 
 ## Creación de Bases de Datos en SQL
 
@@ -92,8 +78,6 @@ Un **RDBMS** (Relational Database Management System) es un tipo específico de D
 CREATE DATABASE nombre_base_datos;
 
 ```
-
----
 
 ## Lenguaje de Definición de Datos (DDL)
 
@@ -128,8 +112,6 @@ CREATE DATABASE nombre_base_datos;
 
   ```
 
----
-
 ## Lenguaje de Manipulación de Datos (DML)
 
 - **Selección de Datos (`SELECT`)**
@@ -160,8 +142,6 @@ CREATE DATABASE nombre_base_datos;
   DELETE FROM empleados WHERE id = 1;
 
   ```
-
----
 
 ## Funciones Agregadas en SQL
 
@@ -211,8 +191,6 @@ CREATE DATABASE nombre_base_datos;
   HAVING SUM(salario) > 5000;
 
   ```
-
----
 
 ## Restricciones de Datos
 
