--- a/Base de Datos/SQL/10.NormalizacionSQL.md
+++ b/Base de Datos/SQL/10.NormalizacionSQL.md
@@ -127,24 +127,18 @@ La habilidad y el proyecto son atributos multivalor. Para cumplir con 4NF, debem
 | 1           | Proyecto A |
 | 1           | Proyecto B |
 
----
-
 ## 2. Ventajas de la Normalización
 
-- **Eliminación de Redundancia**: Al dividir los datos en tablas más pequeñas, se evita la duplicación innecesaria de información.
-- **Mejora de la Consistencia**: Las actualizaciones y eliminaciones se realizan de manera más eficiente sin riesgo de inconsistencias.
-- **Facilidad de Mantenimiento**: Es más fácil realizar modificaciones o actualizaciones cuando los datos están organizados y distribuidos correctamente.
-- **Mejora de la Integridad de los Datos**: Asegura que los datos estén correctos y completos, y evita errores de inserción o actualización.
-
----
+- **Eliminación de Redundancia:** Al dividir los datos en tablas más pequeñas, se evita la duplicación innecesaria de información.
+- **Mejora de la Consistencia:** Las actualizaciones y eliminaciones se realizan de manera más eficiente sin riesgo de inconsistencias.
+- **Facilidad de Mantenimiento:** Es más fácil realizar modificaciones o actualizaciones cuando los datos están organizados y distribuidos correctamente.
+- **Mejora de la Integridad de los Datos:** Asegura que los datos estén correctos y completos, y evita errores de inserción o actualización.
 
 ## 3. Desventajas de la Normalización
 
-- **Complejidad de Consultas**: Las consultas SQL pueden volverse más complejas debido a la necesidad de unir varias tablas.
-- **Rendimiento**: Aunque la normalización mejora la integridad de los datos, puede afectar el rendimiento en bases de datos grandes debido a la gran cantidad de uniones necesarias.
-- **Desnormalización Necesaria**: A veces, la desnormalización (reintroducción de redundancia) puede ser necesaria para mejorar el rendimiento en sistemas de gran escala.
-
----
+- **Complejidad de Consultas:** Las consultas SQL pueden volverse más complejas debido a la necesidad de unir varias tablas.
+- **Rendimiento:** Aunque la normalización mejora la integridad de los datos, puede afectar el rendimiento en bases de datos grandes debido a la gran cantidad de uniones necesarias.
+- **Desnormalización Necesaria:** A veces, la desnormalización (reintroducción de redundancia) puede ser necesaria para mejorar el rendimiento en sistemas de gran escala.
 
 ## 4. Resumen de las Formas Normales
 
@@ -155,8 +149,6 @@ La habilidad y el proyecto son atributos multivalor. Para cumplir con 4NF, debem
 | **3NF**      | Elimina dependencias transitivas entre atributos no clave.                                |
 | **4NF**      | Elimina dependencias multivaluadas.                                                       |
 | **5NF**      | Elimina dependencias de unión, donde las relaciones dependen de la combinación de claves. |
-
----
 
 ## 5. Cómo Diseñar una Base de Datos Normalizada
 
