--- a/Base de Datos/SQL/14.Modelos&Tecnicas.md
+++ b/Base de Datos/SQL/14.Modelos&Tecnicas.md
@@ -4,14 +4,12 @@
 
 El modelo **ACID** asegura la fiabilidad de las transacciones en bases de datos relacionales. Los cuatro principios son:
 
-1. **Atomicidad (A)**: Las transacciones deben ser tratadas como unidades indivisibles. O todas las operaciones se completan correctamente o ninguna lo hace.
-2. **Consistencia (C)**: Una transacción debe llevar la base de datos de un estado válido a otro, asegurando que las reglas de negocio y las restricciones de la base de datos se mantengan.
+1. **Atomicidad (A):** Las transacciones deben ser tratadas como unidades indivisibles. O todas las operaciones se completan correctamente o ninguna lo hace.
+2. **Consistencia (C):** Una transacción debe llevar la base de datos de un estado válido a otro, asegurando que las reglas de negocio y las restricciones de la base de datos se mantengan.
 
-3. **Aislamiento (I)**: Las transacciones concurrentes no deben interferir entre sí. El resultado de una transacción no debe depender del estado intermedio de otra.
+3. **Aislamiento (I):** Las transacciones concurrentes no deben interferir entre sí. El resultado de una transacción no debe depender del estado intermedio de otra.
 
-4. **Durabilidad (D)**: Una vez que una transacción ha sido confirmada, sus efectos deben ser permanentes, incluso en caso de fallos del sistema.
-
----
+4. **Durabilidad (D):** Una vez que una transacción ha sido confirmada, sus efectos deben ser permanentes, incluso en caso de fallos del sistema.
 
 ## BASE
 
@@ -19,24 +17,20 @@ El modelo **BASE** es una alternativa utilizada en bases de datos NoSQL, ideal p
 
 BASE significa:
 
-1. **Básicamente Disponible**: El sistema garantiza la disponibilidad del servicio, aunque algunos datos puedan no estar disponibles temporalmente.
-2. **Estado Suave (Soft state)**: El estado del sistema puede cambiar con el tiempo, incluso sin una transacción explícita, debido a la naturaleza distribuida de los datos.
+1. **Básicamente Disponible:** El sistema garantiza la disponibilidad del servicio, aunque algunos datos puedan no estar disponibles temporalmente.
+2. **Estado Suave (Soft state):** El estado del sistema puede cambiar con el tiempo, incluso sin una transacción explícita, debido a la naturaleza distribuida de los datos.
 
-3. **Consistencia Eventual**: No se garantiza la consistencia inmediata, pero eventualmente todos los nodos convergerán a un estado consistente.
-
----
+3. **Consistencia Eventual:** No se garantiza la consistencia inmediata, pero eventualmente todos los nodos convergerán a un estado consistente.
 
 ## Teorema CAP
 
 El **Teorema CAP** establece que en un sistema distribuido solo es posible garantizar dos de las siguientes tres propiedades:
 
-1. **Consistencia (C)**: Todos los nodos tienen la misma información al mismo tiempo.
-2. **Disponibilidad (A)**: Cada solicitud recibe una respuesta, exitosa o fallida.
-3. **Tolerancia a Particiones (P)**: El sistema sigue funcionando incluso si hay una interrupción en la comunicación entre nodos.
+1. **Consistencia (C):** Todos los nodos tienen la misma información al mismo tiempo.
+2. **Disponibilidad (A):** Cada solicitud recibe una respuesta, exitosa o fallida.
+3. **Tolerancia a Particiones (P):** El sistema sigue funcionando incluso si hay una interrupción en la comunicación entre nodos.
 
 Dado que solo se pueden obtener dos de estas tres características, las bases de datos distribuidas deben hacer concesiones según sus necesidades (por ejemplo, priorizar consistencia y tolerancia a particiones sobre disponibilidad).
-
----
 
 ## PACELC
 
@@ -47,17 +41,15 @@ Dado que solo se pueden obtener dos de estas tres características, las bases de
 
 Esto significa que incluso sin fallos de red, los sistemas distribuidos deben comprometerse entre la consistencia y la latencia.
 
----
-
 ## Técnicas
 
 ### Partición Horizontal (Sharding)
 
 El **sharding** es una técnica de partición horizontal de bases de datos. En lugar de almacenar todos los datos en una única base de datos, los datos se dividen en fragmentos o **shards**, que se distribuyen en varios servidores. Cada **shard** contiene un subconjunto de los datos, lo que permite:
 
-1. **Escalabilidad**: Distribuir la carga entre múltiples servidores permite manejar grandes volúmenes de datos y tráfico.
-2. **Rendimiento**: Dividir los datos reduce el tiempo de búsqueda y las consultas.
-3. **Tolerancia a fallos**: Si un shard falla, el sistema puede seguir operando con los datos almacenados en otros shards.
+1. **Escalabilidad:** Distribuir la carga entre múltiples servidores permite manejar grandes volúmenes de datos y tráfico.
+2. **Rendimiento:** Dividir los datos reduce el tiempo de búsqueda y las consultas.
+3. **Tolerancia a fallos:** Si un shard falla, el sistema puede seguir operando con los datos almacenados en otros shards.
 
 #### Ejemplo de Sharding
 
@@ -65,9 +57,9 @@ Un ejemplo común de sharding se encuentra en sistemas de usuarios. En lugar de 
 
 #### Estrategias de Sharding
 
-- **Por rango**: Dividir los datos según un rango de valores (por ejemplo, IDs de usuarios).
-- **Por hash**: Usar una función hash para distribuir los datos uniformemente entre los shards.
-- **Por lista**: Separar los datos en shards según una lista predefinida de valores, como regiones geográficas.
+- **Por rango:** Dividir los datos según un rango de valores (por ejemplo, IDs de usuarios).
+- **Por hash:** Usar una función hash para distribuir los datos uniformemente entre los shards.
+- **Por lista:** Separar los datos en shards según una lista predefinida de valores, como regiones geográficas.
 
 ### Partición Vertical
 
@@ -75,9 +67,9 @@ La **partición vertical** consiste en dividir una tabla de base de datos en fra
 
 #### Ventajas de la Partición Vertical
 
-1. **Rendimiento optimizado**: Las consultas que solo requieren un subconjunto de las columnas pueden ejecutarse más rápidamente, ya que el sistema solo tiene que acceder a la partición correspondiente.
-2. **Reducción del tamaño de las filas**: Si ciertas columnas contienen datos grandes (como imágenes o descripciones largas), se pueden almacenar en una partición separada, reduciendo el tamaño de las filas en las consultas regulares.
-3. **Seguridad**: Al separar las columnas sensibles en diferentes particiones, se puede mejorar la seguridad y el control de acceso.
+1. **Rendimiento optimizado:** Las consultas que solo requieren un subconjunto de las columnas pueden ejecutarse más rápidamente, ya que el sistema solo tiene que acceder a la partición correspondiente.
+2. **Reducción del tamaño de las filas:** Si ciertas columnas contienen datos grandes (como imágenes o descripciones largas), se pueden almacenar en una partición separada, reduciendo el tamaño de las filas en las consultas regulares.
+3. **Seguridad:** Al separar las columnas sensibles en diferentes particiones, se puede mejorar la seguridad y el control de acceso.
 
 #### Ejemplo de Partición Vertical
 
@@ -87,5 +79,5 @@ Esto optimiza las consultas de búsqueda de productos, que solo necesitarían ac
 
 #### Desventajas
 
-1. **Complejidad de consultas**: Si las consultas requieren acceder a varias columnas que están en diferentes particiones, el sistema debe realizar una **unión (JOIN)** entre las particiones, lo que puede afectar el rendimiento.
-2. **Mantenimiento**: Mantener y gestionar múltiples particiones verticales puede ser más complicado, especialmente si las columnas se agregan o modifican con frecuencia.
+1. **Complejidad de consultas:** Si las consultas requieren acceder a varias columnas que están en diferentes particiones, el sistema debe realizar una **unión (JOIN)** entre las particiones, lo que puede afectar el rendimiento.
+2. **Mantenimiento:** Mantener y gestionar múltiples particiones verticales puede ser más complicado, especialmente si las columnas se agregan o modifican con frecuencia.
