--- a/Base de Datos/SQL/4.Indices.md
+++ b/Base de Datos/SQL/4.Indices.md
@@ -17,16 +17,12 @@ Un **índice** en SQL es una estructura que mejora la velocidad de las operacion
 
 ### Tipos de Índices
 
-1. **Índices simples**: se crean sobre una sola columna.
-2. **Índices compuestos**: se crean sobre varias columnas.
-
----
+1. **Índices simples:** se crean sobre una sola columna.
+2. **Índices compuestos:** se crean sobre varias columnas.
 
 ## Cómo Usar Índices para Mejorar el Rendimiento
 
 El uso de índices puede mejorar significativamente el rendimiento de las consultas que involucran operaciones de búsqueda o filtrado. Sin embargo, no todas las columnas deben tener un índice; solo aquellas que son frecuentemente utilizadas en las cláusulas `WHERE`, `JOIN` o `ORDER BY`.
-
----
 
 ## Comando CREATE INDEX
 
