--- a/Base de Datos/SQL/6.Transacciones.md
+++ b/Base de Datos/SQL/6.Transacciones.md
@@ -4,7 +4,7 @@
 
 Una **transacción** en SQL es un conjunto de operaciones que se ejecutan como una sola unidad lógica. Las transacciones aseguran que una serie de operaciones se realicen completamente o no se realicen en absoluto, lo que garantiza la integridad de los datos en caso de errores o fallos del sistema.
 
-Las transacciones deben seguir las propiedades **ACID**:
+Las transacciones deben seguir las propiedades **ACID:**
 
 - **Atomicidad** (Atomicity): Todas las operaciones dentro de una transacción se completan o ninguna lo hace.
 - **Consistencia** (Consistency): Las transacciones llevan la base de datos de un estado válido a otro estado válido.
@@ -18,11 +18,11 @@ Las transacciones deben seguir las propiedades **ACID**:
 
 ### Comandos de Control de Transacciones
 
-- **`BEGIN`**: Inicia una nueva transacción.
-- **`COMMIT`**: Confirma los cambios realizados por la transacción, haciéndolos permanentes en la base de datos.
-- **`ROLLBACK`**: Revierte todos los cambios realizados desde el inicio de la transacción.
-- **`SAVEPOINT`**: Crea un punto intermedio dentro de una transacción, permitiendo deshacer parte de la transacción sin afectarla por completo.
-- **`ROLLBACK TO SAVEPOINT`**: Revertir la transacción hasta el `SAVEPOINT` especificado.
+- **`BEGIN`:** Inicia una nueva transacción.
+- **`COMMIT`:** Confirma los cambios realizados por la transacción, haciéndolos permanentes en la base de datos.
+- **`ROLLBACK`:** Revierte todos los cambios realizados desde el inicio de la transacción.
+- **`SAVEPOINT`:** Crea un punto intermedio dentro de una transacción, permitiendo deshacer parte de la transacción sin afectarla por completo.
+- **`ROLLBACK TO SAVEPOINT`:** Revertir la transacción hasta el `SAVEPOINT` especificado.
 
 ### Ejemplo de una Transacción
 
@@ -42,8 +42,6 @@ ROLLBACK TO SAVEPOINT primer_cambio;
 COMMIT;
 
 ```
-
----
 
 ## Control de Concurrencia y Aislamiento de Transacciones
 
@@ -82,8 +80,6 @@ COMMIT;
 
 ```
 
----
-
 ## Bloqueos (LOCK), Deadlocks y Manejo de Conflictos de Concurrencia
 
 ### Bloqueos (LOCK)
@@ -111,8 +107,6 @@ UPDATE empleados SET salario = salario + 500 WHERE departamento = 'Ventas';
 COMMIT;
 
 ```
-
----
 
 ## Deadlocks
 
