--- a/Base de Datos/SQL/7.Procedimientos&Triggers.md
+++ b/Base de Datos/SQL/7.Procedimientos&Triggers.md
@@ -8,10 +8,10 @@ Un **procedimiento almacenado** es un conjunto de instrucciones SQL que se almac
 
 ### Ventajas de los Procedimientos Almacenados
 
-- **Reutilización del código**: El código SQL se almacena en la base de datos y puede ejecutarse desde cualquier lugar.
-- **Mejora del rendimiento**: Los procedimientos almacenados se compilan y optimizan en el servidor.
-- **Seguridad**: Pueden restringirse los accesos a la ejecución de los procedimientos sin exponer la lógica del código.
-- **Mantenimiento simplificado**: Permiten centralizar la lógica de negocios en la base de datos.
+- **Reutilización del código:** El código SQL se almacena en la base de datos y puede ejecutarse desde cualquier lugar.
+- **Mejora del rendimiento:** Los procedimientos almacenados se compilan y optimizan en el servidor.
+- **Seguridad:** Pueden restringirse los accesos a la ejecución de los procedimientos sin exponer la lógica del código.
+- **Mantenimiento simplificado:** Permiten centralizar la lógica de negocios en la base de datos.
 
 ### Creación de un Procedimiento Almacenado
 
@@ -77,8 +77,6 @@ $$;
   CALL obtener_sueldo(101, salario);
 
   ```
-
----
 
 ## Triggers (Disparadores)
 
