--- a/Ciencias de Computación/2.ComputacionBinaria.md
+++ b/Ciencias de Computación/2.ComputacionBinaria.md
@@ -2,8 +2,6 @@
 
 La **programación de computadoras** se basa en recibir entradas, procesarlas y generar una salida que resuelva un problema. El proceso que ocurre entre la entrada y la salida es conocido como una **caja negra**. Este curso se centra en comprender cómo funciona dicha caja negra y cómo las computadoras realizan tareas básicas como contar, almacenar información y comunicarse.
 
----
-
 ## Sistema de Numeración Binario
 
 Las computadoras utilizan el **sistema binario** para contar. A diferencia de los humanos, que usamos el sistema decimal (base 10), las computadoras usan **base 2**, donde solo hay dos posibles valores: **0** (apagado) y **1** (encendido). Un solo valor de 0 o 1 se llama **bit**.
@@ -38,8 +36,6 @@ Por ejemplo, el número binario **101** se puede descomponer como:
 
 El valor final es **4 + 0 + 1 = 5**.
 
----
-
 ## Bits y Bytes
 
 Las computadoras usualmente agrupan los bits(Dígitos binarios) en conjuntos de **8 bits**, conocidos como **bytes**. Un byte puede representar números del 0 al 255. Por ejemplo:
@@ -49,16 +45,14 @@ Las computadoras usualmente agrupan los bits(Dígitos binarios) en conjuntos de 
 
 Esto se utiliza comúnmente en la representación de datos como colores y caracteres.
 
----
-
 ## Operaciones Binarias
 
 Las **operaciones binarias** son fundamentales para la manipulación de datos en el sistema binario. Las más comunes incluyen:
 
 ### AND (Y lógico)
 
-- **Definición**: La operación AND compara dos bits y da como resultado 1 solo si ambos bits son 1. De lo contrario, el resultado es 0.
-- **Tabla de Verdad**:
+- **Definición:** La operación AND compara dos bits y da como resultado 1 solo si ambos bits son 1. De lo contrario, el resultado es 0.
+- **Tabla de Verdad:**
 
   | A   | B   | A AND B |
   | --- | --- | ------- |
@@ -67,12 +61,12 @@ Las **operaciones binarias** son fundamentales para la manipulación de datos en
   | 1   | 0   | 0       |
   | 1   | 1   | 1       |
 
-- **Ejemplo**: `1010 AND 1100 = 1000`
+- **Ejemplo:** `1010 AND 1100 = 1000`
 
 ### OR (O lógico)
 
-- **Definición**: La operación OR compara dos bits y da como resultado 1 si al menos uno de los bits es 1. Si ambos bits son 0, el resultado es 0.
-- **Tabla de Verdad**:
+- **Definición:** La operación OR compara dos bits y da como resultado 1 si al menos uno de los bits es 1. Si ambos bits son 0, el resultado es 0.
+- **Tabla de Verdad:**
 
   | A   | B   | A OR B |
   | --- | --- | ------ |
@@ -81,12 +75,12 @@ Las **operaciones binarias** son fundamentales para la manipulación de datos en
   | 1   | 0   | 1      |
   | 1   | 1   | 1      |
 
-- **Ejemplo**: `1010 OR 1100 = 1110`
+- **Ejemplo:** `1010 OR 1100 = 1110`
 
 ### XOR (O exclusivo)
 
-- **Definición**: La operación XOR compara dos bits y da como resultado 1 si solo uno de los bits es 1, pero 0 si ambos bits son iguales.
-- **Tabla de Verdad**:
+- **Definición:** La operación XOR compara dos bits y da como resultado 1 si solo uno de los bits es 1, pero 0 si ambos bits son iguales.
+- **Tabla de Verdad:**
 
   | A   | B   | A XOR B |
   | --- | --- | ------- |
@@ -95,7 +89,7 @@ Las **operaciones binarias** son fundamentales para la manipulación de datos en
   | 1   | 0   | 1       |
   | 1   | 1   | 0       |
 
-- **Ejemplo**: `1010 XOR 1100 = 0110`
+- **Ejemplo:** `1010 XOR 1100 = 0110`
 
 Estas operaciones son esenciales para el diseño de circuitos lógicos y la implementación de algoritmos en hardware y software.
 
@@ -105,17 +99,17 @@ Los **códigos de error** son mecanismos diseñados para detectar y corregir err
 
 ### Código de Paridad
 
-- **Definición**: Añade un bit de paridad a los datos para que el número total de bits 1 sea par (paridad par) o impar (paridad impar).
-- **Ejemplo**: Para los datos `1011` con paridad impar, el bit de paridad es `1` (10111).
+- **Definición:** Añade un bit de paridad a los datos para que el número total de bits 1 sea par (paridad par) o impar (paridad impar).
+- **Ejemplo:** Para los datos `1011` con paridad impar, el bit de paridad es `1` (10111).
 
 ### Códigos de Hamming
 
-- **Definición**: Un código de corrección de errores que permite detectar y corregir errores de un solo bit en un bloque de datos.
-- **Ejemplo**: En un código de Hamming (7,4), se envían 7 bits para representar 4 bits de datos, añadiendo 3 bits de paridad para corrección.
+- **Definición:** Un código de corrección de errores que permite detectar y corregir errores de un solo bit en un bloque de datos.
+- **Ejemplo:** En un código de Hamming (7,4), se envían 7 bits para representar 4 bits de datos, añadiendo 3 bits de paridad para corrección.
 
 ### Código Reed-Solomon
 
-- **Definición**: Un código de corrección de errores utilizado en diversas aplicaciones, como CD y DVD, capaz de corregir errores en bloques de datos.
+- **Definición:** Un código de corrección de errores utilizado en diversas aplicaciones, como CD y DVD, capaz de corregir errores en bloques de datos.
 
 Estos códigos ayudan a garantizar la integridad de los datos en sistemas de comunicación y almacenamiento.
 
@@ -125,21 +119,19 @@ La **codificación de datos** es el proceso de transformar información en una f
 
 ### Codificación de Texto (ASCII y Unicode)
 
-- **ASCII**: Utiliza 7 bits para representar caracteres, proporcionando un conjunto básico de caracteres.
-- **Unicode**: Amplía ASCII para incluir caracteres de múltiples idiomas y símbolos, utilizando diferentes longitudes de bits (UTF-8, UTF-16, etc.).
+- **ASCII:** Utiliza 7 bits para representar caracteres, proporcionando un conjunto básico de caracteres.
+- **Unicode:** Amplía ASCII para incluir caracteres de múltiples idiomas y símbolos, utilizando diferentes longitudes de bits (UTF-8, UTF-16, etc.).
 
 ### Codificación de Imágenes (BMP, JPEG, PNG)
 
-- **BMP**: Un formato de imagen sin compresión que usa un esquema binario para representar píxeles.
-- **JPEG**: Usa compresión con pérdida para reducir el tamaño del archivo de imagen.
-- **PNG**: Utiliza compresión sin pérdida para mantener la calidad de la imagen.
+- **BMP:** Un formato de imagen sin compresión que usa un esquema binario para representar píxeles.
+- **JPEG:** Usa compresión con pérdida para reducir el tamaño del archivo de imagen.
+- **PNG:** Utiliza compresión sin pérdida para mantener la calidad de la imagen.
 
 ### Codificación de Video (MPEG, H.264)
 
-- **MPEG**: Un estándar para la compresión de video y audio.
-- **H.264**: Un estándar de compresión de video eficiente que ofrece alta calidad a tasas de bits más bajas.
-
----
+- **MPEG:** Un estándar para la compresión de video y audio.
+- **H.264:** Un estándar de compresión de video eficiente que ofrece alta calidad a tasas de bits más bajas.
 
 ## ASCII: Representación de Caracteres
 
@@ -171,8 +163,6 @@ El estándar ASCII asigna un valor a cada letra, número y símbolo. Por ejemplo
 | H        | 72           | 01001000               |
 | I        | 73           | 01001001               |
 | !        | 33           | 00100001               |
-
----
 
 ## Sistema Hexadecimal
 
@@ -206,8 +196,6 @@ El hexadecimal es útil para representar valores binarios de forma compacta. Por
 
 Por eso, los colores en formato hexadecimal usan 6 dígitos, como **#ff0000** para el rojo, lo que representa la máxima cantidad de rojo y ninguna cantidad de verde o azul.
 
----
-
 ## Arte de Píxeles
 
 Un **píxel** es el bloque más pequeño que compone una imagen digital. Las imágenes están formadas por una cuadrícula de píxeles, donde cada uno tiene un color específico.
@@ -222,8 +210,6 @@ Esto forma la base del arte de píxeles, donde imágenes completas pueden ser ge
 ### Ejemplo de Arte de Píxeles
 
 Una imagen en blanco y negro puede ser representada como una matriz de 0s y 1s, donde cada 0 representa un píxel negro y cada 1 un píxel blanco.
-
----
 
 ## Colores y el Sistema RGB
 
@@ -246,5 +232,3 @@ Los colores también se representan en hexadecimal:
 - **#ff0000** para rojo
 - **#00ff00** para verde
 - **#0000ff** para azul
-
----
