--- a/Ciencias de Computación/3.Algoritmos.md
+++ b/Ciencias de Computación/3.Algoritmos.md
@@ -7,138 +7,138 @@ Un algoritmo es un conjunto de instrucciones definidas, secuenciales y finitas q
 - ### 1. Algoritmos de Búsqueda
 
   - **Búsqueda Lineal (Linear Search)**
-    - **Descripción**: Recorre cada elemento hasta encontrar el objetivo.
-    - **Aplicación**: Listas no ordenadas.
+    - **Descripción:** Recorre cada elemento hasta encontrar el objetivo.
+    - **Aplicación:** Listas no ordenadas.
   - **Búsqueda Binaria (Binary Search)**
-    - **Descripción**: Divide el espacio de búsqueda a la mitad en cada paso.
-    - **Aplicación**: Listas ordenadas.
+    - **Descripción:** Divide el espacio de búsqueda a la mitad en cada paso.
+    - **Aplicación:** Listas ordenadas.
 
 - ### 2. Algoritmos de Ordenamiento
 
   - **Ordenamiento por Burbuja (Bubble Sort)**
 
-    - **Descripción**: Intercambia elementos adyacentes repetidamente.
-    - **Aplicación**: Listas pequeñas o educativas.
+    - **Descripción:** Intercambia elementos adyacentes repetidamente.
+    - **Aplicación:** Listas pequeñas o educativas.
 
   - **Ordenamiento por Inserción (Insertion Sort)**
 
-    - **Descripción**: Inserta elementos en su posición correcta.
-    - **Aplicación**: Listas pequeñas o casi ordenadas.
+    - **Descripción:** Inserta elementos en su posición correcta.
+    - **Aplicación:** Listas pequeñas o casi ordenadas.
 
   - **Ordenamiento por Selección (Selection Sort)**
 
-    - **Descripción**: Selecciona el menor (o mayor) elemento y lo coloca en la posición correcta.
-    - **Aplicación**: Listas pequeñas o educativas.
+    - **Descripción:** Selecciona el menor (o mayor) elemento y lo coloca en la posición correcta.
+    - **Aplicación:** Listas pequeñas o educativas.
 
   - **Ordenamiento Rápido (Quicksort)**
 
-    - **Descripción**: Divide y conquista, elige un pivote y ordena los elementos menores y mayores alrededor de él.
-    - **Aplicación**: Ordenamiento general.
+    - **Descripción:** Divide y conquista, elige un pivote y ordena los elementos menores y mayores alrededor de él.
+    - **Aplicación:** Ordenamiento general.
 
   - **Ordenamiento por Fusión (Merge Sort)**
-    - **Descripción**: Divide en sub-conjuntos más pequeños, los ordena y luego los fusiona.
-    - **Aplicación**: Ordenamiento estable y eficiente.
+    - **Descripción:** Divide en sub-conjuntos más pequeños, los ordena y luego los fusiona.
+    - **Aplicación:** Ordenamiento estable y eficiente.
 
 - ### 3. Algoritmos de Grafos
 
   - **Algoritmo de Dijkstra**
 
-    - **Descripción**: Encuentra el camino más corto desde un nodo fuente a todos los demás nodos en un grafo con pesos positivos.
-    - **Aplicación**: Rutas en redes, navegación.
+    - **Descripción:** Encuentra el camino más corto desde un nodo fuente a todos los demás nodos en un grafo con pesos positivos.
+    - **Aplicación:** Rutas en redes, navegación.
 
   - **Algoritmo de Floyd-Warshall**
 
-    - **Descripción**: Encuentra el camino más corto entre todos los pares de nodos.
-    - **Aplicación**: Redes completas.
+    - **Descripción:** Encuentra el camino más corto entre todos los pares de nodos.
+    - **Aplicación:** Redes completas.
 
   - **Algoritmo de Kruskal**
 
-    - **Descripción**: Encuentra el árbol de expansión mínima usando un enfoque de unión por componentes.
-    - **Aplicación**: Redes de menor costo.
+    - **Descripción:** Encuentra el árbol de expansión mínima usando un enfoque de unión por componentes.
+    - **Aplicación:** Redes de menor costo.
 
   - **Algoritmo de Prim**
-    - **Descripción**: Encuentra el árbol de expansión mínima utilizando una estructura de datos de prioridad.
-    - **Aplicación**: Redes de menor costo.
+    - **Descripción:** Encuentra el árbol de expansión mínima utilizando una estructura de datos de prioridad.
+    - **Aplicación:** Redes de menor costo.
 
 - ### 4. Algoritmos de Recorrido
 
   - **Búsqueda en Anchura (Breadth-First Search, BFS)**
 
-    - **Descripción**: Recorre los nodos nivel por nivel.
-    - **Aplicación**: Encontrar el camino más corto en grafos no ponderados.
+    - **Descripción:** Recorre los nodos nivel por nivel.
+    - **Aplicación:** Encontrar el camino más corto en grafos no ponderados.
 
   - **Búsqueda en Profundidad (Depth-First Search, DFS)**
-    - **Descripción**: Explora tan profundo como sea posible antes de retroceder.
-    - **Aplicación**: Explorar caminos posibles en grafos.
+    - **Descripción:** Explora tan profundo como sea posible antes de retroceder.
+    - **Aplicación:** Explorar caminos posibles en grafos.
 
 - ### 5. Algoritmos de Programación Dinámica
 
   - **Problema de la Mochila (Knapsack Problem)**
 
-    - **Descripción**: Encuentra el máximo valor que puede ser llevado en una mochila con una capacidad limitada.
-    - **Aplicación**: Optimización de recursos.
+    - **Descripción:** Encuentra el máximo valor que puede ser llevado en una mochila con una capacidad limitada.
+    - **Aplicación:** Optimización de recursos.
 
   - **Secuencia de Fibonacci**
 
-    - **Descripción**: Calcula números de Fibonacci de manera eficiente utilizando memoización.
-    - **Aplicación**: Problemas de conteo y secuencias.
+    - **Descripción:** Calcula números de Fibonacci de manera eficiente utilizando memoización.
+    - **Aplicación:** Problemas de conteo y secuencias.
 
   - **Alineación de Secuencias**
-    - **Descripción**: Comparar secuencias de texto o ADN de manera eficiente.
-    - **Aplicación**: Bioinformática, procesamiento de texto.
+    - **Descripción:** Comparar secuencias de texto o ADN de manera eficiente.
+    - **Aplicación:** Bioinformática, procesamiento de texto.
 
 - ### 6. Algoritmos de Divide y Vencerás
 
   - **Multiplicación de Matrices de Strassen**
 
-    - **Descripción**: Optimiza la multiplicación de matrices usando un enfoque divide y vencerás.
-    - **Aplicación**: Multiplicación de matrices grandes.
+    - **Descripción:** Optimiza la multiplicación de matrices usando un enfoque divide y vencerás.
+    - **Aplicación:** Multiplicación de matrices grandes.
 
   - **Transformada Rápida de Fourier (FFT)**
-    - **Descripción**: Calcula la transformada de Fourier de manera eficiente.
-    - **Aplicación**: Procesamiento de señales, análisis de frecuencias.
+    - **Descripción:** Calcula la transformada de Fourier de manera eficiente.
+    - **Aplicación:** Procesamiento de señales, análisis de frecuencias.
 
 - ### 7. Algoritmos de Encriptación
 
   - **AES (Advanced Encryption Standard)**
 
-    - **Descripción**: Algoritmo de cifrado simétrico para proteger datos.
-    - **Aplicación**: Seguridad de datos.
+    - **Descripción:** Algoritmo de cifrado simétrico para proteger datos.
+    - **Aplicación:** Seguridad de datos.
 
   - **RSA (Rivest-Shamir-Adleman)**
-    - **Descripción**: Algoritmo de cifrado asimétrico para transmisión segura de datos.
-    - **Aplicación**: Seguridad en comunicaciones.
+    - **Descripción:** Algoritmo de cifrado asimétrico para transmisión segura de datos.
+    - **Aplicación:** Seguridad en comunicaciones.
 
 - ### 8. Algoritmos de Compresión
 
   - **Compresión de Huffman**
 
-    - **Descripción**: Utiliza un árbol de codificación para comprimir datos basados en la frecuencia de aparición de los caracteres.
-    - **Aplicación**: Compresión de archivos y transmisión de datos.
+    - **Descripción:** Utiliza un árbol de codificación para comprimir datos basados en la frecuencia de aparición de los caracteres.
+    - **Aplicación:** Compresión de archivos y transmisión de datos.
 
   - **Algoritmo LZW (Lempel-Ziv-Welch)**
-    - **Descripción**: Compresión sin pérdida utilizada en formatos como GIF y PNG.
-    - **Aplicación**: Compresión de imágenes y datos.
+    - **Descripción:** Compresión sin pérdida utilizada en formatos como GIF y PNG.
+    - **Aplicación:** Compresión de imágenes y datos.
 
 - ### 9. Algoritmos de Caché
 
   - **LRU (Least Recently Used)**
 
-    - **Descripción**: Reemplaza el bloque de datos que no ha sido utilizado durante el período de tiempo más largo.
-    - **Aplicación**: Sistemas de caché de alto rendimiento.
+    - **Descripción:** Reemplaza el bloque de datos que no ha sido utilizado durante el período de tiempo más largo.
+    - **Aplicación:** Sistemas de caché de alto rendimiento.
 
   - **FIFO (First In, First Out)**
 
-    - **Descripción**: Reemplaza el bloque de datos que ha estado en la caché durante el mayor tiempo.
-    - **Aplicación**: Sistemas simples de caché.
+    - **Descripción:** Reemplaza el bloque de datos que ha estado en la caché durante el mayor tiempo.
+    - **Aplicación:** Sistemas simples de caché.
 
   - **LFU (Least Frequently Used)**
 
-    - **Descripción**: Reemplaza el bloque de datos que ha sido utilizado con menos frecuencia.
-    - **Aplicación**: Caché con patrones de acceso no uniformes.
+    - **Descripción:** Reemplaza el bloque de datos que ha sido utilizado con menos frecuencia.
+    - **Aplicación:** Caché con patrones de acceso no uniformes.
 
   - **Write-Through y Write-Back**
-    - **Descripción**: Políticas para actualizar datos en la caché y almacenamiento principal.
-    - **Aplicación**: Mantenimiento de coherencia en sistemas de caché.
+    - **Descripción:** Políticas para actualizar datos en la caché y almacenamiento principal.
+    - **Aplicación:** Mantenimiento de coherencia en sistemas de caché.
 
   Estos algoritmos son fundamentales en la informática moderna y se utilizan en una variedad de aplicaciones para mejorar el rendimiento, la eficiencia y la seguridad.
