--- a/Ciencias de Computación/7.RedesBasico.md
+++ b/Ciencias de Computación/7.RedesBasico.md
@@ -8,38 +8,34 @@ En la programación de redes, es fundamental comprender los conceptos y protocol
 
 El **modelo OSI** es un estándar teórico que define cómo los diferentes sistemas de redes se comunican entre sí dividiendo la comunicación en **siete capas**, donde cada capa tiene una función específica. Las capas son las siguientes:
 
-1. **Capa Física**: Se encarga de la transmisión física de datos a través del medio de comunicación (cables, fibra óptica, etc.). Define aspectos como la señalización, voltajes, cables, conectores, etc.
-2. **Capa de Enlace de Datos**: Gestiona el acceso al medio físico y la detección de errores. Divide la transmisión en tramas y establece la comunicación directa entre nodos.
-3. **Capa de Red**: Se encarga del direccionamiento lógico (por ejemplo, las direcciones IP) y la determinación de rutas entre origen y destino.
-4. **Capa de Transporte**: Garantiza la entrega confiable de datos entre dos sistemas mediante protocolos como **TCP** (orientado a conexión) o **UDP** (no orientado a conexión).
-5. **Capa de Sesión**: Establece, gestiona y termina las sesiones entre aplicaciones en los dispositivos de la red.
-6. **Capa de Presentación**: Traduce los datos entre el formato de la red y el formato que las aplicaciones pueden procesar, por ejemplo, la compresión de datos y el cifrado.
-7. **Capa de Aplicación**: Interactúa directamente con el software de aplicación, proporcionando servicios de red a las aplicaciones del usuario final (como HTTP, FTP, SMTP).
+1. **Capa Física:** Se encarga de la transmisión física de datos a través del medio de comunicación (cables, fibra óptica, etc.). Define aspectos como la señalización, voltajes, cables, conectores, etc.
+2. **Capa de Enlace de Datos:** Gestiona el acceso al medio físico y la detección de errores. Divide la transmisión en tramas y establece la comunicación directa entre nodos.
+3. **Capa de Red:** Se encarga del direccionamiento lógico (por ejemplo, las direcciones IP) y la determinación de rutas entre origen y destino.
+4. **Capa de Transporte:** Garantiza la entrega confiable de datos entre dos sistemas mediante protocolos como **TCP** (orientado a conexión) o **UDP** (no orientado a conexión).
+5. **Capa de Sesión:** Establece, gestiona y termina las sesiones entre aplicaciones en los dispositivos de la red.
+6. **Capa de Presentación:** Traduce los datos entre el formato de la red y el formato que las aplicaciones pueden procesar, por ejemplo, la compresión de datos y el cifrado.
+7. **Capa de Aplicación:** Interactúa directamente con el software de aplicación, proporcionando servicios de red a las aplicaciones del usuario final (como HTTP, FTP, SMTP).
 
 ### Modelo TCP/IP (Transmission Control Protocol/Internet Protocol)
 
-El **modelo TCP/IP**, a diferencia del OSI, es un modelo más práctico y el que se usa en internet. Tiene solo **cuatro capas**:
+El **modelo TCP/IP**, a diferencia del OSI, es un modelo más práctico y el que se usa en internet. Tiene solo **cuatro capas:**
 
-1. **Acceso a Red**: Equivalente a las capas física y de enlace del modelo OSI, se encarga del acceso al medio físico y la entrega directa de datos en la red.
-2. **Internet**: Corresponde a la capa de red del OSI y gestiona el direccionamiento lógico, principalmente utilizando el protocolo **IP** (IPv4 o IPv6).
-3. **Transporte**: Equivalente a la capa de transporte del OSI, usa **TCP** para conexiones confiables o **UDP** para conexiones rápidas y sin control de errores.
-4. **Aplicación**: Similar a las capas de sesión, presentación y aplicación del OSI, incluye protocolos como **HTTP**, **FTP**, **DNS**, y más.
+1. **Acceso a Red:** Equivalente a las capas física y de enlace del modelo OSI, se encarga del acceso al medio físico y la entrega directa de datos en la red.
+2. **Internet:** Corresponde a la capa de red del OSI y gestiona el direccionamiento lógico, principalmente utilizando el protocolo **IP** (IPv4 o IPv6).
+3. **Transporte:** Equivalente a la capa de transporte del OSI, usa **TCP** para conexiones confiables o **UDP** para conexiones rápidas y sin control de errores.
+4. **Aplicación:** Similar a las capas de sesión, presentación y aplicación del OSI, incluye protocolos como **HTTP**, **FTP**, **DNS**, y más.
 
 Estos modelos son esenciales para entender cómo se estructura la comunicación en redes y cómo interactúan los diferentes protocolos y dispositivos.
-
----
 
 ## Protocolos de Red
 
 Un **protocolo de red** define las reglas y formatos que los dispositivos deben seguir para comunicarse entre sí. Algunos de los protocolos más importantes son:
 
-- **HTTP/HTTPS**: **HTTP** es el protocolo utilizado para la transmisión de páginas web y datos en la web. **HTTPS** agrega una capa de seguridad mediante el uso de cifrado con **SSL/TLS**, protegiendo los datos que viajan entre el cliente y el servidor.
-- **TCP (Transmission Control Protocol)**: Protocolo orientado a conexión que garantiza la entrega de datos en el orden correcto. Es utilizado en aplicaciones donde la confiabilidad es crítica, como la transmisión de archivos o correos electrónicos.
-- **UDP (User Datagram Protocol)**: Protocolo no orientado a conexión, que no garantiza la entrega o el orden de los paquetes, pero es más rápido. Es utilizado en aplicaciones que requieren rapidez, como el streaming o los videojuegos en línea.
-- **IP (Internet Protocol)**: Protocolo que gestiona el direccionamiento y el enrutamiento de los paquetes de datos a través de redes. **IPv4** es la versión más utilizada, aunque **IPv6** se está implementando cada vez más debido a la escasez de direcciones IPv4.
-- **DNS (Domain Name System)**: Sistema que traduce nombres de dominio (como `example.com`) a direcciones IP que los routers y servidores necesitan para enrutar el tráfico correctamente.
-
----
+- **HTTP/HTTPS:** **HTTP** es el protocolo utilizado para la transmisión de páginas web y datos en la web. **HTTPS** agrega una capa de seguridad mediante el uso de cifrado con **SSL/TLS**, protegiendo los datos que viajan entre el cliente y el servidor.
+- **TCP (Transmission Control Protocol):** Protocolo orientado a conexión que garantiza la entrega de datos en el orden correcto. Es utilizado en aplicaciones donde la confiabilidad es crítica, como la transmisión de archivos o correos electrónicos.
+- **UDP (User Datagram Protocol):** Protocolo no orientado a conexión, que no garantiza la entrega o el orden de los paquetes, pero es más rápido. Es utilizado en aplicaciones que requieren rapidez, como el streaming o los videojuegos en línea.
+- **IP (Internet Protocol):** Protocolo que gestiona el direccionamiento y el enrutamiento de los paquetes de datos a través de redes. **IPv4** es la versión más utilizada, aunque **IPv6** se está implementando cada vez más debido a la escasez de direcciones IPv4.
+- **DNS (Domain Name System):** Sistema que traduce nombres de dominio (como `example.com`) a direcciones IP que los routers y servidores necesitan para enrutar el tráfico correctamente.
 
 ## Sockets de Red
 
@@ -47,8 +43,8 @@ Un **socket** es un punto final de la comunicación entre dos máquinas a travé
 
 Un socket tiene dos componentes principales:
 
-- **Dirección IP**: Identifica de manera única un dispositivo en la red.
-- **Puerto**: Identifica una aplicación o servicio en ese dispositivo.
+- **Dirección IP:** Identifica de manera única un dispositivo en la red.
+- **Puerto:** Identifica una aplicación o servicio en ese dispositivo.
 
 ### WebSockets
 
@@ -64,43 +60,39 @@ El protocolo WebSocket utiliza el puerto **80** (para WebSockets sin cifrar) y e
 
 ### Diferencias entre HTTP y WebSocket
 
-- **HTTP**: Comunicación unidireccional (cliente envía petición, servidor responde).
-- **WebSocket**: Comunicación bidireccional persistente (cliente y servidor pueden enviar mensajes en cualquier momento).
-
----
+- **HTTP:** Comunicación unidireccional (cliente envía petición, servidor responde).
+- **WebSocket:** Comunicación bidireccional persistente (cliente y servidor pueden enviar mensajes en cualquier momento).
 
 ### ¿Qué es un Proxy?
 
 Un **proxy** es un servidor intermedio que actúa como puente entre el cliente y el servidor original. Su función principal es recibir solicitudes del cliente y reenviarlas al servidor de destino, actuando como intermediario. Existen varios tipos de proxies, entre ellos:
 
-1. **Proxy Directo**: El cliente se conecta al proxy, que luego se conecta al servidor de destino.
-2. **Proxy Reverso**: Aquí, el servidor se conecta al proxy, y el proxy se encarga de distribuir las solicitudes a varios servidores detrás de él.
+1. **Proxy Directo:** El cliente se conecta al proxy, que luego se conecta al servidor de destino.
+2. **Proxy Reverso:** Aquí, el servidor se conecta al proxy, y el proxy se encarga de distribuir las solicitudes a varios servidores detrás de él.
 
 #### Ventajas de Usar un Proxy
 
-- **Seguridad**: Oculta la dirección IP del cliente, ofreciendo anonimato.
-- **Cacheo**: Almacena en caché los recursos solicitados, lo que mejora el rendimiento y reduce la carga en los servidores.
-- **Control**: Permite bloquear ciertos contenidos o filtrar el tráfico.
+- **Seguridad:** Oculta la dirección IP del cliente, ofreciendo anonimato.
+- **Cacheo:** Almacena en caché los recursos solicitados, lo que mejora el rendimiento y reduce la carga en los servidores.
+- **Control:** Permite bloquear ciertos contenidos o filtrar el tráfico.
 
 ## Redes Locales (LAN) y Redes Amplias (WAN)
 
 Las redes se dividen en dos tipos principales según su alcance geográfico:
 
-- **LAN (Local Area Network)**: Una red que cubre un área pequeña, como una oficina, hogar o edificio. Es rápida y se usa para conectar computadoras, impresoras y otros dispositivos dentro de un espacio limitado.
-- **WAN (Wide Area Network)**: Red que abarca un área geográfica extensa, como una ciudad, país o incluso a nivel global. Internet es el ejemplo más grande de una WAN.
+- **LAN (Local Area Network):** Una red que cubre un área pequeña, como una oficina, hogar o edificio. Es rápida y se usa para conectar computadoras, impresoras y otros dispositivos dentro de un espacio limitado.
+- **WAN (Wide Area Network):** Red que abarca un área geográfica extensa, como una ciudad, país o incluso a nivel global. Internet es el ejemplo más grande de una WAN.
 
 Los programadores deben comprender cómo interactúan las LAN con las WAN, especialmente cuando se desarrollan aplicaciones que necesitan interactuar con sistemas locales y remotos.
-
----
 
 ## Seguridad en Redes
 
 La **seguridad en redes** es crucial para proteger los datos que se transmiten entre dispositivos. Algunos conceptos clave incluyen:
 
-- **Cifrado (SSL/TLS)**: El cifrado es el proceso de codificar datos para que solo el destinatario autorizado pueda leerlos. **SSL** y **TLS** son protocolos de cifrado que protegen la transferencia de datos en la web (HTTPS).
-- **Firewalls**: Son sistemas que monitorean y controlan el tráfico entrante y saliente de una red. Protegen las redes contra accesos no autorizados y ataques.
-- **VPN (Virtual Private Network)**: Una VPN permite una conexión segura entre dos redes a través de internet, proporcionando privacidad y anonimato al ocultar la dirección IP del usuario y cifrar la comunicación.
-- **Autenticación y Autorización**: Son procesos para verificar la identidad de los usuarios (autenticación) y determinar qué recursos pueden acceder (autorización). Se utilizan técnicas como **OAuth**, **JWT** (JSON Web Tokens), entre otros.
+- **Cifrado (SSL/TLS):** El cifrado es el proceso de codificar datos para que solo el destinatario autorizado pueda leerlos. **SSL** y **TLS** son protocolos de cifrado que protegen la transferencia de datos en la web (HTTPS).
+- **Firewalls:** Son sistemas que monitorean y controlan el tráfico entrante y saliente de una red. Protegen las redes contra accesos no autorizados y ataques.
+- **VPN (Virtual Private Network):** Una VPN permite una conexión segura entre dos redes a través de internet, proporcionando privacidad y anonimato al ocultar la dirección IP del usuario y cifrar la comunicación.
+- **Autenticación y Autorización:** Son procesos para verificar la identidad de los usuarios (autenticación) y determinar qué recursos pueden acceder (autorización). Se utilizan técnicas como **OAuth**, **JWT** (JSON Web Tokens), entre otros.
 
 ## Balanceo de Carga y Tolerancia a Fallos
 
@@ -108,14 +100,10 @@ El **balanceo de carga** es una técnica que distribuye el tráfico de red entre
 
 La **tolerancia a fallos** se refiere a la capacidad de un sistema de seguir funcionando en caso de que una parte de la red o un servidor falle. Esto se logra mediante el uso de servidores redundantes, almacenamiento distribuido, y mecanismos de recuperación.
 
----
-
 ## DNS y CDN
 
-- **DNS (Domain Name System)**: Es el sistema que convierte nombres de dominio legibles (como `example.com`) en direcciones IP que las computadoras utilizan para identificar servidores en la red. El DNS es esencial para la navegación web y otros servicios de red.
-- **CDN (Content Delivery Network)**: Es una red de servidores distribuidos por todo el mundo que ayuda a mejorar la entrega de contenido al usuario final. Las CDNs almacenan en caché copias de contenido estático (como imágenes, archivos CSS, JS) en múltiples ubicaciones, lo que permite tiempos de carga más rápidos al entregar contenido desde el servidor más cercano al usuario.
-
----
+- **DNS (Domain Name System):** Es el sistema que convierte nombres de dominio legibles (como `example.com`) en direcciones IP que las computadoras utilizan para identificar servidores en la red. El DNS es esencial para la navegación web y otros servicios de red.
+- **CDN (Content Delivery Network):** Es una red de servidores distribuidos por todo el mundo que ayuda a mejorar la entrega de contenido al usuario final. Las CDNs almacenan en caché copias de contenido estático (como imágenes, archivos CSS, JS) en múltiples ubicaciones, lo que permite tiempos de carga más rápidos al entregar contenido desde el servidor más cercano al usuario.
 
 ## Redes Inalámbricas
 
@@ -133,32 +121,28 @@ Las **redes inalámbricas** permiten que los dispositivos se conecten sin cables
 
 - Redes móviles de largo alcance que permiten la conectividad a internet a dispositivos como teléfonos inteligentes y tablets en cualquier lugar donde haya cobertura.
 
----
-
 ## Direcciones IP y Subnetting
 
 ### Direccionamiento IP
 
 Las **direcciones IP** son identificadores únicos para dispositivos en una red. Existen dos versiones principales:
 
-- **IPv4**: Utiliza direcciones de 32 bits, expresadas en cuatro octetos (por ejemplo, `192.168.1.1`). La cantidad de direcciones posibles es de aproximadamente 4.3 mil millones. Debido al crecimiento de internet, IPv4 se está agotando.
+- **IPv4:** Utiliza direcciones de 32 bits, expresadas en cuatro octetos (por ejemplo, `192.168.1.1`). La cantidad de direcciones posibles es de aproximadamente 4.3 mil millones. Debido al crecimiento de internet, IPv4 se está agotando.
 
-- **IPv6**: Utiliza direcciones de 128 bits, expresadas en ocho grupos de cuatro dígitos hexadecimales (por ejemplo, `2001:0db8:85a3:0000:0000:8a2e:0370:7334`). Ofrece un espacio de direcciones mucho mayor, con aproximadamente 340 undecillones de direcciones.
+- **IPv6:** Utiliza direcciones de 128 bits, expresadas en ocho grupos de cuatro dígitos hexadecimales (por ejemplo, `2001:0db8:85a3:0000:0000:8a2e:0370:7334`). Ofrece un espacio de direcciones mucho mayor, con aproximadamente 340 undecillones de direcciones.
 
-**Asignación de Direcciones IP**:
+**Asignación de Direcciones IP:**
 
 - Las direcciones IP se asignan de forma **estática** (manual) o **dinámica** (mediante DHCP - Dynamic Host Configuration Protocol).
-- **Dirección IP pública**: Asignada por un ISP, visible en internet.
-- **Dirección IP privada**: Utilizada dentro de una red local (por ejemplo, `192.168.x.x` o `10.x.x.x`).
+- **Dirección IP pública:** Asignada por un ISP, visible en internet.
+- **Dirección IP privada:** Utilizada dentro de una red local (por ejemplo, `192.168.x.x` o `10.x.x.x`).
 
 ### Subnetting
 
 **Subnetting** es el proceso de dividir una red en subredes más pequeñas para mejorar la eficiencia y la seguridad. Permite una mejor utilización del espacio de direcciones IP y facilita la gestión de la red.
 
-- **Máscara de Subred**: Define el tamaño de la subred. Por ejemplo, en `255.255.255.0` (o `/24`), los primeros 24 bits se utilizan para la red, y los 8 bits restantes para los hosts.
-- **CIDR (Classless Inter-Domain Routing)**: Permite definir el tamaño de la subred sin las restricciones de las clases tradicionales. Por ejemplo, `192.168.1.0/24` indica una red con una máscara de 24 bits.
-
----
+- **Máscara de Subred:** Define el tamaño de la subred. Por ejemplo, en `255.255.255.0` (o `/24`), los primeros 24 bits se utilizan para la red, y los 8 bits restantes para los hosts.
+- **CIDR (Classless Inter-Domain Routing):** Permite definir el tamaño de la subred sin las restricciones de las clases tradicionales. Por ejemplo, `192.168.1.0/24` indica una red con una máscara de 24 bits.
 
 ## Arquitecturas de Red
 
@@ -166,17 +150,15 @@ Las **direcciones IP** son identificadores únicos para dispositivos en una red.
 
 En una **red client-server**, los clientes (dispositivos) solicitan servicios y recursos a un servidor central que proporciona dichos servicios. Esta arquitectura es común en aplicaciones web y de correo electrónico.
 
-- **Servidor**: Proporciona recursos o servicios (por ejemplo, archivos, impresoras).
-- **Cliente**: Solicita y utiliza los recursos proporcionados por el servidor.
+- **Servidor:** Proporciona recursos o servicios (por ejemplo, archivos, impresoras).
+- **Cliente:** Solicita y utiliza los recursos proporcionados por el servidor.
 
 ### Redes Peer-to-Peer (P2P)
 
 En una **red P2P**, cada nodo actúa tanto como cliente como servidor. Los nodos pueden compartir recursos y datos directamente entre sí, sin necesidad de un servidor central.
 
-- **Ventajas**: Mayor flexibilidad, menor costo de infraestructura.
-- **Desventajas**: Menor control centralizado, posibles problemas de seguridad y sincronización.
-
----
+- **Ventajas:** Mayor flexibilidad, menor costo de infraestructura.
+- **Desventajas:** Menor control centralizado, posibles problemas de seguridad y sincronización.
 
 ## Conmutación y Enrutamiento
 
@@ -184,19 +166,17 @@ En una **red P2P**, cada nodo actúa tanto como cliente como servidor. Los nodos
 
 La **conmutación** se refiere al proceso de dirigir datos a través de una red. Los métodos de conmutación incluyen:
 
-- **Conmutación de Circuitos**: Establece una conexión dedicada entre dos nodos durante la comunicación (por ejemplo, líneas telefónicas tradicionales).
-- **Conmutación de Paquetes**: Divide los datos en paquetes y los envía a través de la red; cada paquete puede tomar una ruta diferente (por ejemplo, redes IP).
-- **Conmutación de Celdas**: Utiliza celdas de longitud fija para transmitir datos; utilizado en redes de tecnología como ATM (Asynchronous Transfer Mode).
+- **Conmutación de Circuitos:** Establece una conexión dedicada entre dos nodos durante la comunicación (por ejemplo, líneas telefónicas tradicionales).
+- **Conmutación de Paquetes:** Divide los datos en paquetes y los envía a través de la red; cada paquete puede tomar una ruta diferente (por ejemplo, redes IP).
+- **Conmutación de Celdas:** Utiliza celdas de longitud fija para transmitir datos; utilizado en redes de tecnología como ATM (Asynchronous Transfer Mode).
 
 ### Enrutamiento
 
 **Enrutamiento** es el proceso de seleccionar los caminos para el tráfico de red entre nodos. Los enrutadores determinan la mejor ruta para enviar datos a su destino.
 
-- **Protocolos de Enrutamiento**: Incluyen **RIP (Routing Information Protocol)**, **OSPF (Open Shortest Path First)**, y **BGP (Border Gateway Protocol)**.
-- **Enrutamiento Estático**: Rutas definidas manualmente por el administrador.
-- **Enrutamiento Dinámico**: Rutas que se ajustan automáticamente según el estado de la red.
-
----
+- **Protocolos de Enrutamiento:** Incluyen **RIP (Routing Information Protocol)**, **OSPF (Open Shortest Path First)**, y **BGP (Border Gateway Protocol)**.
+- **Enrutamiento Estático:** Rutas definidas manualmente por el administrador.
+- **Enrutamiento Dinámico:** Rutas que se ajustan automáticamente según el estado de la red.
 
 ## Desarrollo y Pruebas de Redes
 
@@ -204,7 +184,7 @@ La **conmutación** se refiere al proceso de dirigir datos a través de una red.
 
 **Virtualización de Redes** permite crear redes virtuales sobre una infraestructura física, proporcionando flexibilidad y aislamiento para diferentes entornos.
 
-- **Redes Virtuales**: Creación de redes separadas lógicamente en una infraestructura física compartida.
+- **Redes Virtuales:** Creación de redes separadas lógicamente en una infraestructura física compartida.
 
 **Cloud Networking** se refiere a la integración y gestión de redes en entornos de computación en la nube.
 
@@ -214,28 +194,26 @@ La **conmutación** se refiere al proceso de dirigir datos a través de una red.
 
 El **monitoreo** de redes ayuda a garantizar el rendimiento y la seguridad. Algunas herramientas incluyen:
 
-- **Wireshark**: Herramienta para capturar y analizar tráfico de red.
-- **Nagios**: Plataforma para monitorear la disponibilidad y el rendimiento de los sistemas de red.
-- **Nmap (Network Mapper)**: Herramienta para escanear redes y descubrir dispositivos y servicios disponibles.
-- **Zabbix**: Plataforma de monitoreo para evaluar el estado y el rendimiento de redes y servidores.
+- **Wireshark:** Herramienta para capturar y analizar tráfico de red.
+- **Nagios:** Plataforma para monitorear la disponibilidad y el rendimiento de los sistemas de red.
+- **Nmap (Network Mapper):** Herramienta para escanear redes y descubrir dispositivos y servicios disponibles.
+- **Zabbix:** Plataforma de monitoreo para evaluar el estado y el rendimiento de redes y servidores.
 
 ### Pruebas de Red
 
 **Pruebas de red** implican evaluar la conectividad, el rendimiento y la seguridad de una red.
 
-- **Ping**: Verifica la conectividad entre dos dispositivos.
-- **Traceroute**: Muestra la ruta que siguen los paquetes a través de la red.
-- **Bandwidth Testing**: Mide la capacidad de la red y el rendimiento de transferencia de datos.
+- **Ping:** Verifica la conectividad entre dos dispositivos.
+- **Traceroute:** Muestra la ruta que siguen los paquetes a través de la red.
+- **Bandwidth Testing:** Mide la capacidad de la red y el rendimiento de transferencia de datos.
 
 ## Calidad de Servicio (QoS)
 
 **QoS (Quality of Service)** es un conjunto de técnicas para garantizar el rendimiento de la red y la prioridad de ciertos tipos de tráfico.
 
-- **Clasificación de Tráfico**: Diferencia el tráfico según su tipo y prioridad.
-- **Garantías de Ancho de Banda**: Asigna recursos para asegurar un mínimo de ancho de banda para aplicaciones críticas.
-- **Control de Congestión**: Maneja el tráfico durante los períodos de alta demanda para mantener el rendimiento.
-
----
+- **Clasificación de Tráfico:** Diferencia el tráfico según su tipo y prioridad.
+- **Garantías de Ancho de Banda:** Asigna recursos para asegurar un mínimo de ancho de banda para aplicaciones críticas.
+- **Control de Congestión:** Maneja el tráfico durante los períodos de alta demanda para mantener el rendimiento.
 
 ## Protocolos de Comunicación de Bajo Nivel
 
@@ -243,10 +221,8 @@ El **monitoreo** de redes ayuda a garantizar el rendimiento y la seguridad. Algu
 
 **Ethernet** es el protocolo estándar para redes de área local (LAN) que define cómo se transmiten los datos entre dispositivos en una red.
 
-- **Estándares Ethernet**: Incluyen **10/100/1000 Mbps (Gigabit Ethernet)** y **10 Gbps**.
-- **Frames Ethernet**: Unidades de datos transmitidas en una red Ethernet.
-
----
+- **Estándares Ethernet:** Incluyen **10/100/1000 Mbps (Gigabit Ethernet)** y **10 Gbps**.
+- **Frames Ethernet:** Unidades de datos transmitidas en una red Ethernet.
 
 ## Tendencias Emergentes
 
@@ -254,23 +230,21 @@ El **monitoreo** de redes ayuda a garantizar el rendimiento y la seguridad. Algu
 
 **SDN (Software-Defined Networking)** es un enfoque para gestionar redes mediante software, proporcionando mayor flexibilidad y control.
 
-- **Control Centralizado**: La red se gestiona desde un controlador centralizado.
-- **Programabilidad**: Permite la configuración y gestión de redes mediante programación.
+- **Control Centralizado:** La red se gestiona desde un controlador centralizado.
+- **Programabilidad:** Permite la configuración y gestión de redes mediante programación.
 
 ### IoT (Internet of Things)
 
 **IoT (Internet of Things)** se refiere a la conectividad y comunicación entre dispositivos inteligentes, permitiendo la automatización y el intercambio de datos.
 
-- **Dispositivos IoT**: Incluyen sensores, cámaras, electrodomésticos inteligentes y otros dispositivos conectados.
+- **Dispositivos IoT:** Incluyen sensores, cámaras, electrodomésticos inteligentes y otros dispositivos conectados.
 
 ### NFV (Network Functions Virtualization)
 
 **NFV (Network Functions Virtualization)** es una arquitectura para virtualizar funciones de red que tradicionalmente se ejecutan en hardware dedicado, utilizando máquinas virtuales y tecnología de virtualización.
 
-- **Virtualización de Funciones de Red**: Permite la implementación de funciones como firewalls, balanceadores de carga y sistemas de detección de intrusiones en software, en lugar de hardware especializado.
-- **Ventajas de NFV**: Reducción de costos de hardware, flexibilidad en la implementación, y escalabilidad.
-
----
+- **Virtualización de Funciones de Red:** Permite la implementación de funciones como firewalls, balanceadores de carga y sistemas de detección de intrusiones en software, en lugar de hardware especializado.
+- **Ventajas de NFV:** Reducción de costos de hardware, flexibilidad en la implementación, y escalabilidad.
 
 ## Herramientas de Automatización y Gestión
 
@@ -278,19 +252,19 @@ El **monitoreo** de redes ayuda a garantizar el rendimiento y la seguridad. Algu
 
 **Ansible** es una herramienta de automatización para la gestión y configuración de sistemas.
 
-- **Despliegue Automático**: Permite la configuración y despliegue de servidores y aplicaciones de manera automática.
-- **Playbooks**: Archivos YAML que definen las tareas y configuraciones a aplicar.
+- **Despliegue Automático:** Permite la configuración y despliegue de servidores y aplicaciones de manera automática.
+- **Playbooks:** Archivos YAML que definen las tareas y configuraciones a aplicar.
 
 ### Puppet
 
 **Puppet** es una herramienta de gestión de configuración que permite automatizar la administración de sistemas y la implementación de configuraciones.
 
-- **Manifiestos**: Archivos que definen el estado deseado de los sistemas y servicios.
-- **Puppet Master**: Servidor centralizado que gestiona y aplica las configuraciones a los nodos clientes.
+- **Manifiestos:** Archivos que definen el estado deseado de los sistemas y servicios.
+- **Puppet Master:** Servidor centralizado que gestiona y aplica las configuraciones a los nodos clientes.
 
 ### Chef
 
 **Chef** es una herramienta de automatización de TI para gestionar la infraestructura como código.
 
-- **Recetas**: Scripts que definen la configuración y el estado deseado de los sistemas.
-- **Chef Server**: Servidor centralizado que coordina la configuración de nodos y recursos.
+- **Recetas:** Scripts que definen la configuración y el estado deseado de los sistemas.
+- **Chef Server:** Servidor centralizado que coordina la configuración de nodos y recursos.
