--- a/Ciencias de Computación/9.BaseDatos.md
+++ b/Ciencias de Computación/9.BaseDatos.md
@@ -8,19 +8,19 @@ Existen diferentes tipos de bases de datos, entre los cuales destacan:
 
 ### Tipos de Bases de Datos
 
-1. **Relacionales**: Usan tablas para almacenar datos, que se relacionan entre sí mediante claves primarias y externas. Ejemplos incluyen **MySQL**, **PostgreSQL**, **Oracle** y **SQL Server**. Se gestionan mediante **SQL (Structured Query Language)** y siguen los principios **ACID**.
-2. **NoSQL**: Estas bases de datos son más flexibles que las relacionales, adecuadas para grandes volúmenes de datos distribuidos y no estructurados. Los tipos más comunes de NoSQL son:
+1. **Relacionales:** Usan tablas para almacenar datos, que se relacionan entre sí mediante claves primarias y externas. Ejemplos incluyen **MySQL**, **PostgreSQL**, **Oracle** y **SQL Server**. Se gestionan mediante **SQL (Structured Query Language)** y siguen los principios **ACID**.
+2. **NoSQL:** Estas bases de datos son más flexibles que las relacionales, adecuadas para grandes volúmenes de datos distribuidos y no estructurados. Los tipos más comunes de NoSQL son:
 
-   - **Bases de datos clave-valor**: Redis, DynamoDB.
-   - **Bases de datos de documentos**: MongoDB, CouchDB.
-   - **Bases de datos orientadas a grafos**: Neo4j, ArangoDB.
-   - **Bases de datos de columnas anchas**: Cassandra, HBase.
+   - **Bases de datos clave-valor:** Redis, DynamoDB.
+   - **Bases de datos de documentos:** MongoDB, CouchDB.
+   - **Bases de datos orientadas a grafos:** Neo4j, ArangoDB.
+   - **Bases de datos de columnas anchas:** Cassandra, HBase.
 
-3. **Bases de Datos en Memoria**: Almacenan la mayor parte de los datos en memoria RAM para ofrecer velocidades extremadamente rápidas en la lectura y escritura. Ejemplos: Redis, Memcached.
+3. **Bases de Datos en Memoria:** Almacenan la mayor parte de los datos en memoria RAM para ofrecer velocidades extremadamente rápidas en la lectura y escritura. Ejemplos: Redis, Memcached.
 
 ### Características Clave de las Bases de Datos
 
-- **Persistencia**: Los datos se almacenan de manera que persisten a través de reinicios del sistema.
-- **Escalabilidad**: Capacidad para manejar volúmenes crecientes de datos y tráfico.
-- **Seguridad**: Control de acceso y encriptación para proteger los datos sensibles.
-- **Consultas y Transacciones**: Operaciones eficientes para la inserción, actualización y eliminación de datos, así como consultas complejas que permiten extraer la información necesaria.
+- **Persistencia:** Los datos se almacenan de manera que persisten a través de reinicios del sistema.
+- **Escalabilidad:** Capacidad para manejar volúmenes crecientes de datos y tráfico.
+- **Seguridad:** Control de acceso y encriptación para proteger los datos sensibles.
+- **Consultas y Transacciones:** Operaciones eficientes para la inserción, actualización y eliminación de datos, así como consultas complejas que permiten extraer la información necesaria.
