--- a/DevOps & Despliegue/Documentacion & Mantenimiento/1.DocsCodigo.md
+++ b/DevOps & Despliegue/Documentacion & Mantenimiento/1.DocsCodigo.md
@@ -16,11 +16,9 @@ func calcularTotalConImpuesto(subtotal float64) float64 {
 }
 ```
 
----
-
 ## 2. Comentarios de funciones/métodos
 
-**Incluye**:
+**Incluye:**
 
 - Qué hace la función.
 - Qué parámetros recibe.
@@ -46,8 +44,6 @@ def procesar_orden(orden):
     # lógica de procesamiento...
 ```
 
----
-
 ## 📦 3. Documentación de archivos/módulos
 
 Al principio de cada archivo importante, puedes incluir un bloque que explique el propósito general del archivo, dependencias importantes y cualquier contexto.
@@ -63,8 +59,6 @@ Al principio de cada archivo importante, puedes incluir un bloque que explique e
  * Autor: Kevin Herrera
  */
 ```
-
----
 
 ## 🧩 4. Documentar estructuras de datos y modelos
 
@@ -82,19 +76,15 @@ type Usuario struct {
 }
 ```
 
----
-
 ## 📚 5. Generadores de documentación automática
 
 Usa herramientas que generen documentación legible desde los comentarios, por ejemplo:
 
-- **Go**: Usa `godoc` y sigue el estilo de comentarios encima de funciones públicas.
-- **Python**: Usa `docstrings` y puedes generar documentación con herramientas como **Sphinx**.
-- **JavaScript/TypeScript**: Usa **JSDoc**.
-- **Java**: Usa **Javadoc**.
-- **C#**: Usa comentarios XML para `///`.
-
----
+- **Go:** Usa `godoc` y sigue el estilo de comentarios encima de funciones públicas.
+- **Python:** Usa `docstrings o pydoc` y puedes generar documentación con herramientas como **Sphinx**.
+- **JavaScript/TypeScript:** Usa **JSDoc o TypeDoc**.
+- **Java:** Usa **Javadoc**.
+- **C#:** Usa comentarios XML para `///`.
 
 ## 6. Comentarios para APIs REST (si aplica)
 
@@ -137,11 +127,11 @@ Documenta brevemente lo que verifica cada test si no es evidente.
 
 Usa etiquetas estándar para facilitar el rastreo de tareas o problemas:
 
-- **TODO**: para tareas pendientes.
+- **TODO:** para tareas pendientes.
 
-- **FIXME**: para errores conocidos.
+- **FIXME:** para errores conocidos.
 
-- **HACK**: para soluciones temporales que deben mejorarse.
+- **HACK:** para soluciones temporales que deben mejorarse.
 
 ```go
   // TODO: Reemplazar esto con lógica basada en configuración dinámica.
@@ -154,8 +144,6 @@ Usa etiquetas estándar para facilitar el rastreo de tareas o problemas:
 - Evita repetir lo que el código ya dice.
 - Actualiza los comentarios si cambia el código.
 - No abuses: demasiados comentarios pueden ser contraproducentes si explican obviedades.
-
----
 
 ## 🧠 Ejemplo resumen (Go)
 
