--- a/Frontend/2.EstructuraHTML.md
+++ b/Frontend/2.EstructuraHTML.md
@@ -308,7 +308,7 @@ Asocia correctamente las etiquetas con los campos:
 
 ## 8. Herramientas de Validación
 
-- **W3C Markup Validator**: Valida la sintaxis HTML
-- **WAVE**: Evalúa accesibilidad
-- **Lighthouse**: Auditoría integral (performance, SEO, accesibilidad)
-- **axe DevTools**: Extensión para pruebas de accesibilidad
+- **W3C Markup Validator:** Valida la sintaxis HTML
+- **WAVE:** Evalúa accesibilidad
+- **Lighthouse:** Auditoría integral (performance, SEO, accesibilidad)
+- **axe DevTools:** Extensión para pruebas de accesibilidad
