--- a/Frontend/3.Css.md
+++ b/Frontend/3.Css.md
@@ -401,11 +401,11 @@ Divide el contenedor en filas y columnas creando un sistema de cuadrícula bidim
 
 ## 6. Consejos y Buenas Prácticas
 
-- **Especificidad**: Los selectores más específicos tienen prioridad
-- **Organización**: Agrupa estilos relacionados y usa comentarios
-- **Reutilización**: Crea clases reutilizables para patrones comunes
-- **Validación**: Verifica que tu CSS sea válido
-- **Responsive**: Usa media queries para diferentes tamaños de pantalla
+- **Especificidad:** Los selectores más específicos tienen prioridad
+- **Organización:** Agrupa estilos relacionados y usa comentarios
+- **Reutilización:** Crea clases reutilizables para patrones comunes
+- **Validación:** Verifica que tu CSS sea válido
+- **Responsive:** Usa media queries para diferentes tamaños de pantalla
 
   ```css
   /* Media query para pantallas pequeñas */
