--- a/Base de Datos/SQL/8.FuncionesAvanzadas.md
+++ b/Base de Datos/SQL/8.FuncionesAvanzadas.md
@@ -8,55 +8,53 @@ Las funciones de manejo de cadenas permiten realizar operaciones como la concate
 
 ### 1.1 Funciones Comunes
 
-- **`CONCAT()`**: Une dos o más cadenas de texto.
+- **`CONCAT()`:** Une dos o más cadenas de texto.
 
   ```sql
   SELECT CONCAT('Hola, ', 'mundo!') AS saludo;
   ```
 
-- **`SUBSTRING()`**: Extrae una subcadena de una cadena.
+- **`SUBSTRING()`:** Extrae una subcadena de una cadena.
 
   ```sql
   SELECT SUBSTRING('Ejemplo de subcadena', 1, 7) AS subcadena;
 
   ```
 
-- **`LENGTH()`**: Devuelve la longitud de una cadena.
+- **`LENGTH()`:** Devuelve la longitud de una cadena.
 
   ```sql
   SELECT LENGTH('Texto de ejemplo') AS longitud;
 
   ```
 
-- **`UPPER()`**: Convierte una cadena a mayúsculas.
+- **`UPPER()`:** Convierte una cadena a mayúsculas.
 
   ```sql
   SELECT UPPER('texto en minúsculas') AS mayusculas;
 
   ```
 
-- **`LOWER()`**: Convierte una cadena a minúsculas.
+- **`LOWER()`:** Convierte una cadena a minúsculas.
 
   ```sql
   SELECT LOWER('TEXTO EN MAYÚSCULAS') AS minusculas;
 
   ```
 
-- **`TRIM()`**: Elimina los espacios en blanco del principio y final de una cadena.
+- **`TRIM()`:** Elimina los espacios en blanco del principio y final de una cadena.
 
   ```sql
   SELECT TRIM(' texto con espacios ') AS texto_limpio;
 
   ```
 
-- **`REPLACE()`**: Reemplaza todas las ocurrencias de una subcadena por otra.
+- **`REPLACE()`:** Reemplaza todas las ocurrencias de una subcadena por otra.
 
   ```sql
   SELECT REPLACE('texto antiguo', 'antiguo', 'nuevo') AS texto_modificado;
 
   ```
-
----
 
 ## 2. Funciones de Fecha y Hora
 
@@ -64,56 +62,54 @@ Las funciones de fecha y hora permiten manipular y consultar datos temporales.
 
 ### 2.1 Funciones Comunes
 
-- **`NOW()`**: Devuelve la fecha y hora actuales.
+- **`NOW()`:** Devuelve la fecha y hora actuales.
 
   ```sql
   SELECT NOW() AS fecha_hora_actual;
 
   ```
 
-- **`CURRENT_DATE`**: Devuelve la fecha actual sin la hora.
+- **`CURRENT_DATE`:** Devuelve la fecha actual sin la hora.
 
   ```sql
   SELECT CURRENT_DATE AS fecha_actual;
 
   ```
 
-- **`CURRENT_TIME`**: Devuelve la hora actual sin la fecha.
+- **`CURRENT_TIME`:** Devuelve la hora actual sin la fecha.
 
   ```sql
   SELECT CURRENT_TIME AS hora_actual;
 
   ```
 
-- **`DATE_PART()`**: Extrae una parte específica de una fecha o hora.
+- **`DATE_PART()`:** Extrae una parte específica de una fecha o hora.
 
   ```sql
   SELECT DATE_PART('year', NOW()) AS anio_actual;
 
   ```
 
-- **`DATE_TRUNC()`**: Trunca una fecha a una precisión específica (año, mes, día, etc.).
+- **`DATE_TRUNC()`:** Trunca una fecha a una precisión específica (año, mes, día, etc.).
 
   ```sql
   SELECT DATE_TRUNC('month', NOW()) AS inicio_mes;
 
   ```
 
-- **`AGE()`**: Calcula la diferencia entre dos fechas.
+- **`AGE()`:** Calcula la diferencia entre dos fechas.
 
   ```sql
   SELECT AGE(NOW(), '2000-01-01') AS edad;
 
   ```
 
-- **`TO_CHAR()`**: Convierte una fecha o hora a una cadena con un formato específico.
+- **`TO_CHAR()`:** Convierte una fecha o hora a una cadena con un formato específico.
 
   ```sql
   SELECT TO_CHAR(NOW(), 'DD/MM/YYYY HH24:MI:SS') AS fecha_formateada;
 
   ```
-
----
 
 ## 3. Funciones Numéricas
 
@@ -121,49 +117,47 @@ Las funciones numéricas permiten realizar operaciones y cálculos matemáticos 
 
 ### 3.1 Funciones Comunes
 
-- **`ROUND()`**: Redondea un número a un número específico de decimales.
+- **`ROUND()`:** Redondea un número a un número específico de decimales.
 
   ```sql
   SELECT ROUND(123.4567, 2) AS numero_redondeado;
 
   ```
 
-- **`FLOOR()`**: Redondea un número hacia abajo al entero más cercano.
+- **`FLOOR()`:** Redondea un número hacia abajo al entero más cercano.
 
   ```sql
   SELECT FLOOR(123.4567) AS entero_inferior;
 
   ```
 
-- **`CEIL()`**: Redondea un número hacia arriba al entero más cercano.
+- **`CEIL()`:** Redondea un número hacia arriba al entero más cercano.
 
   ```sql
   SELECT CEIL(123.4567) AS entero_superior;
 
   ```
 
-- **`ABS()`**: Devuelve el valor absoluto de un número.
+- **`ABS()`:** Devuelve el valor absoluto de un número.
 
   ```sql
   SELECT ABS(-123.456) AS valor_absoluto;
 
   ```
 
-- **`POWER()`**: Calcula la potencia de un número.
+- **`POWER()`:** Calcula la potencia de un número.
 
   ```sql
   SELECT POWER(2, 3) AS potencia; -- 2^3 = 8
 
   ```
 
-- **`SQRT()`**: Calcula la raíz cuadrada de un número.
+- **`SQRT()`:** Calcula la raíz cuadrada de un número.
 
   ```sql
   SELECT SQRT(16) AS raiz_cuadrada;
 
   ```
-
----
 
 ## 4. Funciones Condicionales
 
@@ -171,7 +165,7 @@ Las funciones condicionales permiten realizar operaciones basadas en condiciones
 
 ### 4.1 Funciones Comunes
 
-- **`CASE`**: Implementa lógica condicional dentro de una consulta SQL.
+- **`CASE`:** Implementa lógica condicional dentro de una consulta SQL.
 
   ```sql
   SELECT
@@ -184,14 +178,14 @@ Las funciones condicionales permiten realizar operaciones basadas en condiciones
 
   ```
 
-- **`COALESCE()`**: Devuelve el primer valor no nulo de una lista de expresiones.
+- **`COALESCE()`:** Devuelve el primer valor no nulo de una lista de expresiones.
 
   ```sql
   SELECT COALESCE(NULL, NULL, 'Valor por defecto') AS resultado;
 
   ```
 
-- **`NULLIF()`**: Devuelve NULL si dos expresiones son iguales; de lo contrario, devuelve la primera expresión.
+- **`NULLIF()`:** Devuelve NULL si dos expresiones son iguales; de lo contrario, devuelve la primera expresión.
 
   ```sql
   SELECT NULLIF(salario, 0) AS salario_no_cero
@@ -199,14 +193,14 @@ Las funciones condicionales permiten realizar operaciones basadas en condiciones
 
   ```
 
-- **`GREATEST()`**: Devuelve el mayor de una lista de valores.
+- **`GREATEST()`:** Devuelve el mayor de una lista de valores.
 
   ```sql
   SELECT GREATEST(10, 20, 30) AS mayor_valor;
 
   ```
 
-- **`LEAST()`**: Devuelve el menor de una lista de valores.
+- **`LEAST()`:** Devuelve el menor de una lista de valores.
 
   ```sql
   SELECT LEAST(10, 20, 30) AS menor_valor;
