--- a/Base de Datos/SQL/9.SQLAvanzado.md
+++ b/Base de Datos/SQL/9.SQLAvanzado.md
@@ -27,7 +27,7 @@ FROM empleados;
 
 ### 1.2 Funciones de Ventana Comunes
 
-- **`ROW_NUMBER()`**: Asigna un número de fila único dentro de una partición.
+- **`ROW_NUMBER()`:** Asigna un número de fila único dentro de una partición.
 
   ```sql
   SELECT
@@ -38,7 +38,7 @@ FROM empleados;
 
   ```
 
-- **`RANK()`**: Asigna un rango a cada fila dentro de una partición, con rangos duplicados para valores iguales.
+- **`RANK()`:** Asigna un rango a cada fila dentro de una partición, con rangos duplicados para valores iguales.
 
   ```sql
   SELECT
@@ -49,7 +49,7 @@ FROM empleados;
 
   ```
 
-- **`DENSE_RANK()`**: Similar a RANK(), pero sin saltos en los rangos.
+- **`DENSE_RANK()`:** Similar a RANK(), pero sin saltos en los rangos.
 
   ```sql
   SELECT
@@ -60,7 +60,7 @@ FROM empleados;
 
   ```
 
-- **`NTILE()`**: Divide el conjunto de resultados en un número especificado de grupos y asigna un número de grupo a cada fila.
+- **`NTILE()`:** Divide el conjunto de resultados en un número especificado de grupos y asigna un número de grupo a cada fila.
 
   ```sql
   SELECT
@@ -70,8 +70,6 @@ FROM empleados;
   FROM empleados;
 
   ```
-
----
 
 ## 2. Consultas Recursivas
 
@@ -107,8 +105,6 @@ SELECT * FROM jerarquia;
 
 - La parte ancla selecciona a los empleados sin jefe (nivel superior).
 - La parte recursiva encuentra empleados cuyo jefe está en la jerarquía actual.
-
----
 
 ## 3. Operaciones Pivote/Unpivote
 
@@ -167,8 +163,6 @@ UNPIVOT (
 
 La consulta UNPIVOT convierte las columnas de Enero, Febrero y Marzo en filas.
 
----
-
 ## 4. Expresiones de Tabla Comunes (CTE)
 
 Las CTE permiten definir subconsultas reutilizables en una consulta principal, mejorando la legibilidad y modularidad.
@@ -196,8 +190,6 @@ WHERE nombre LIKE 'J%';
 
 - La CTE empleados_cte selecciona empleados con un salario superior a 50,000.
 - La consulta principal utiliza esta CTE para filtrar los empleados cuyo nombre comienza con 'J'.
-
----
 
 ## 5. SQL Dinámico
 
