--- a/DevOps & Despliegue/Documentacion & Mantenimiento/2.Mantenimiento.md
+++ b/DevOps & Despliegue/Documentacion & Mantenimiento/2.Mantenimiento.md
@@ -8,17 +8,23 @@ El mantenimiento de código heredado o "legacy code" es fundamental para garanti
 
 - ## Mantener Compatibilidad
 
-  Si el código heredado es utilizado por otros proyectos, mantener la compatibilidad con las versiones anteriores es crucial. En Go, esto implica no cambiar la API pública sin incrementar la versión MAJOR.
+  Si el código heredado es utilizado por otros proyectos, mantener la compatibilidad con las versiones anteriores es crucial. Esto implica no cambiar la API pública sin incrementar la versión MAJOR.
 
 - ## Refactorización Gradual
 
   Si es necesario mejorar el código, hazlo de forma gradual. A medida que el código es modificado, asegúrate de mantener una buena cobertura de pruebas para evitar romper funcionalidades.
 
+  Refactorizar implica reestructurar el código para mejorar su legibilidad, eficiencia y reducir la complejidad sin cambiar su funcionalidad. Esto puede implicar dividir funciones largas, renombrar variables para mayor claridad, o extraer funciones reutilizables.
+
+- **Técnicas:** Renombrar variables, extraer funciones, simplificar expresiones, eliminar código duplicado, modularizar componentes, y reducir la complejidad ciclomática.
+
 - ## Documentación y Comentarios
 
   Los proyectos antiguos suelen carecer de buena documentación. Agregar comentarios útiles y crear una documentación clara ayudará a otros desarrolladores a mantener el código en el futuro.
 
-- ## Herramientas para Migrar y Mantener Proyectos en Go
+- ## Herramientas para Migrar y Mantener Proyectos
 
-  - **Go Modules:** Facilita la gestión de dependencias en proyectos antiguos.
+  - **Go Modules**
+  - **Npm + Package.json**-
+  - **Pip + env\Scripts\activate + requirements.txt**
   - **Deprecación Controlada:** Si es necesario eliminar funcionalidades, hazlo de manera gradual marcando métodos o funciones como obsoletos antes de eliminarlos en una versión mayor.
